プリプロセッサ経過反映

--- a/kintone-help-astro-poc/src/pages/ja/app/form/lookup/set_lookup.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/form/lookup/set_lookup.mdx
@@ -200,7 +200,7 @@ import Note from "@/components/Note.astro";
 
 <Heading id="lookup_set_lookup_40">参考：動画で見るルックアップの設定</Heading>
 
-動画でも、<Disabled2 regions={["US"]} />顧客管理アプリと案件管理アプリを例に&#123;&#123;< /disabled2 >&#125;&#125;ルックアップの設定方法を説明しています。
+動画でも、<Disabled2 regions={["US"]}>顧客管理アプリと案件管理アプリを例に</Disabled2>ルックアップの設定方法を説明しています。
 
 <Disabled2 regions={["US"]}>
 
