--- a/kintone-help-astro-poc/src/pages/ja/app/setup/followup/app_othersettings.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/followup/app_othersettings.mdx
@@ -1,14 +1,16 @@
 ---
 title: "高度な設定"
 weight: 700
-description: "「高度な設定」で設定できることを紹介しています。"
+description: "［高度な設定］で設定できることを紹介しています。"
 aliases:
   - "/ja/id/040477"
 layout: "@/layouts/PageLayout.astro"
 ---
 
+import Wovn from "@/components/Wovn.astro";
 
-アプリの「高度な設定」では、次の設定ができます。
+
+アプリの<Wovn>［高度な設定］</Wovn>では、次の設定ができます。<Wovn></Wovn>
 
 * [画像のサムネイル表示を設定する](/k/ja/id/040481.html)
 * [アプリコードを設定する](/k/ja/id/040478.html)
