--- a/kintone-help-astro-poc/src/pages/ja/app/setup/followup/app_relation.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/followup/app_relation.mdx
@@ -10,6 +10,7 @@ import Disabled2 from "@/components/Disabled2.astro";
 import Heading from "@/components/Heading.astro";
 import Img from "@/components/Img.astro";
 import Kintone from "@/components/Kintone.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
 複数のアプリ間でデータを連携する機能として、<Kintone />では3つ機能を用意しています。ルックアップ、アプリアクション、関連レコード一覧の機能です。  
@@ -22,7 +23,8 @@ import Kintone from "@/components/Kintone.astro";
 ルックアップは、他のアプリからデータを取得する機能です。  
 アプリのレコードにデータを入力する際に、他のアプリから必要なデータを検索してコピーできるようになります。入力の手間を減らせるだけでなく、入力ミスも防げます。   
 たとえば、活動履歴アプリに顧客管理アプリを関連付けてルックアップを設定すると、活動履歴アプリには顧客管理アプリの情報が取り込まれます。取り込んだ顧客情報はリンクされます。  
-ルックアップの詳細は、「[ルックアップの設定](/k/ja/id/040544.html)」を参照してください。
+詳細は、次のページを参照してください。<Wovn></Wovn>  
+[ルックアップの設定](/k/ja/id/040544.html)
 
 アプリ間のデータのコピーには、次に説明するアプリアクションも利用できます。
 
@@ -33,9 +35,10 @@ import Kintone from "@/components/Kintone.astro";
 アプリアクションは、指定したアプリにデータをコピーしたいときに便利な機能です。  
 たとえば、顧客情報を案件管理アプリや活動履歴アプリに転記したい場合、顧客管理アプリにアクションを作成します。  
 コピーしたいデータがあるアプリのほうに設定する点が、ルックアップとの違いです。たとえば、顧客情報アプリにアクションを設定すると、ボタンを押すだけで、顧客情報アプリから活動履歴アプリに顧客情報をコピーできるようになります。  
-アクションの詳細は「[アプリアクションでできること](/k/ja/id/040488.html)」を参照してください。
+詳細は、次のページを参照してください。<Wovn></Wovn>  
+[アプリアクションでできること](/k/ja/id/040488.html)
 
-アクションのコピー先にルックアップフィールドを使うことで、アクションとルックアップを組み合わせて使うことも可能です。
+アクションのコピー先に<Wovn>［ルックアップ］</Wovn>フィールドを使うことで、アクションとルックアップを組み合わせて使うことも可能です。
 
 <Heading id="create_app_app_relation_30">関連レコード一覧</Heading>
 
@@ -44,10 +47,12 @@ import Kintone from "@/components/Kintone.astro";
 関連レコード一覧は、今開いているレコードと関連するレコードを一覧表示する機能です。ルックアップやアクションと異なり、データを表示するだけで、コピーはしません。  
 たとえば、顧客管理アプリに、それぞれの顧客に関連する案件や営業活動の一覧を表示できるようになります。  
 また、ルックアップと関連レコードを組み合わせて逆引きのような使い方もできます。  
-詳細は「[関連レコードを一覧表示する](/k/ja/id/040550.html)」を参照してください。
+詳細は、次のページを参照してください。<Wovn></Wovn>  
+[関連レコードを一覧表示する](/k/ja/id/040550.html)
 
 <Disabled2 regions={["US"]}>
 
-このページで紹介している営業支援パックは、アプリストアから追加できるアプリです。活用方法は「[営業支援パックを使ってみよう](/k/ja/id/040637.html)」で説明しています。
+このページで紹介している営業支援パックは、アプリストアから追加できるアプリです。詳細は、次のページを参照してください。<Wovn></Wovn>  
+[営業支援パックを使ってみよう](/k/ja/id/040637.html)
 
 </Disabled2>
