--- a/kintone-help-astro-poc/src/pages/ja/app/setup/followup/appearance.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/followup/appearance.mdx
@@ -9,57 +9,58 @@ layout: "@/layouts/PageLayout.astro"
 import Heading from "@/components/Heading.astro";
 import Img from "@/components/Img.astro";
 import Kintone from "@/components/Kintone.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
-「アイコンと説明」では、利用者の操作画面に表示されるアプリの説明を設定できます。  
+<Wovn>［アイコンと説明］</Wovn>では、利用者の操作画面に表示されるアプリの説明を設定できます。  
 1つ1つのアプリに合わせてアイコンを変更し、アプリの説明に操作方法や注意事項など利用者をサポートする情報を追加しておくことで、より使いやすいアプリになります。
 
 <Heading id="app_generalsettings_appearance_20">アプリのアイコンを変更する</Heading>
 
 アプリのアイコン画像の「縦×横」のサイズは、「56px × 56px」を目安に調整してください。
 
-1. 「レコードの一覧」画面で、画面右上にある歯車の形をした[アプリを設定]アイコンをクリックします。  
-   <Img src="/k/kintone/img/settings_new_icon.png" alt="スクリーンショット：[アプリを設定]アイコンが枠線で強調されている" />
+1. <Wovn>［レコードの一覧］</Wovn>画面で、画面右上にある歯車の形をした<Wovn>［アプリを設定］</Wovn>アイコンをクリックします。<Wovn></Wovn><Wovn></Wovn>  
+   <Img src="/k/kintone/img/settings_new_icon.png" alt="スクリーンショット：［アプリを設定］アイコンが枠線で強調されている" />
 
-1. 「アプリの設定」画面で、[設定]タブの「一般設定」にある[アイコンと説明]をクリックします。  
-   「アプリの設定」画面で、[アイコンの変更]をクリックしても、アイコンを変更する画面を表示できます。  
-   <Img src="/k/kintone/img-ja/app_changename_02.png" alt="スクリーンショット：[アイコンの変更]と[アイコンと説明]のリンクを枠線で強調している" />
+1. <Wovn>［アプリの設定］</Wovn>画面で、<Wovn>［設定］</Wovn>タブの<Wovn>［一般設定］</Wovn>にある<Wovn>［アイコンと説明］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn><Wovn></Wovn><Wovn></Wovn>  
+   <Wovn>［アプリの設定］</Wovn>画面で、<Wovn>［アイコンの変更］</Wovn>をクリックしても、アイコンを変更する画面を表示できます。<Wovn></Wovn><Wovn></Wovn>  
+   <Img src="/k/kintone/img-ja/app_changename_02.png" alt="スクリーンショット：［アイコンの変更］と［アイコンと説明］のリンクを枠線で強調している" />
 
-1. 「アイコンと説明」画面で、アイコンを設定します。  
+1. <Wovn>［アイコンと説明］</Wovn>画面で、アイコンを設定します。  
    アプリのアイコンを設定する方法は、次のとおりです。
 
-   * 次のアイコンから選択する：  
+   * <Wovn>［次のアイコンから選択する］</Wovn>：  
      あらかじめ<Kintone />に用意されているアイコンから選択する方法です。
-   * 画像をアップロードする (png/jpg/gif/bmp)：  
-     任意の画像をアップロードする方法がです。
+   * <Wovn>［画像をアップロードする (png/jpg/gif/bmp)］</Wovn>：  
+     任意の画像をアップロードする方法です。
 
    <Img src="/k/kintone/img-ja/appearance_01.png" alt="スクリーンショット：アイコン選択" />
 
-1. 画面右下の[保存]をクリックします。
+1. 画面右下の<Wovn>［保存］</Wovn>をクリックします。<Wovn></Wovn>
 
-1. 「アプリの設定」画面で、[アプリを更新]をクリックします。
+1. <Wovn>［アプリの設定］</Wovn>画面で、<Wovn>［アプリを更新］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn>
 
-1. 「アプリを更新」のダイアログで、[アプリを更新]をクリックします。
+1. <Wovn>［アプリを更新］</Wovn>ダイアログで、<Wovn>［アプリを更新］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn>
 
 <Heading id="app_generalsettings_appearance_30">アプリの説明を記載する</Heading>
 
 アプリの説明には、アプリの目的や使い方、注意事項などを記載しましょう。  
-「アプリの説明」に入力できる文字数の上限は、10,000文字です。  
-記載したアプリの説明は、「レコードの一覧」画面や「レコードの詳細」画面などに表示されます。  
-<Img src="/k/kintone/img-ja/app_changename_00.png" alt="スクリーンショット：アプリの説明を枠線で強調している「レコードの一覧」画面" />
+<Wovn>［アプリの説明］</Wovn>に入力できる文字数の上限は、10,000文字です。<Wovn></Wovn>  
+記載したアプリの説明は、<Wovn>［レコードの一覧］</Wovn>画面や<Wovn>［レコードの詳細］</Wovn>画面などに表示されます。  
+<Img src="/k/kintone/img-ja/app_changename_00.png" alt="スクリーンショット：アプリの説明を枠線で強調している［レコードの一覧］画面" />
 
-1. 「レコードの一覧」画面で、画面右上にある歯車の形をした[アプリを設定]アイコンをクリックします。  
-   <Img src="/k/kintone/img/settings_new_icon.png" alt="スクリーンショット：[アプリを設定]アイコンが枠線で強調されている" />
+1. <Wovn>［レコードの一覧］</Wovn>画面で、画面右上にある歯車の形をした<Wovn>［アプリを設定］</Wovn>アイコンをクリックします。<Wovn></Wovn><Wovn></Wovn>  
+   <Img src="/k/kintone/img/settings_new_icon.png" alt="スクリーンショット：［アプリを設定］アイコンが枠線で強調されている" />
 
-1. 「アプリの設定」画面で、[設定]タブの「一般設定」にある[アイコンと説明]をクリックします。
+1. <Wovn>［アプリの設定］</Wovn>画面で、<Wovn>［設定］</Wovn>タブの<Wovn>［一般設定］</Wovn>にある<Wovn>［アイコンと説明］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn><Wovn></Wovn><Wovn></Wovn>
 
-1. 「アイコンと説明」画面で、アプリの説明を入力します。  
-   Webページへのリンクを貼ったり、書式設定を使って文字を装飾したりすることもできます。  
-   書式設定を使って装飾した文字は、該当の範囲を選択して「フォーマット削除」をクリックすると、元の状態に戻すことができます。  
+1. <Wovn>［アイコンと説明］</Wovn>画面で、アプリの説明を入力します。  
+   Webページへのリンクを貼ったり、書式設定を使って文字を装飾したりできます。  
+   書式設定を使って装飾した文字は、該当の範囲を選択して<Wovn>［フォーマット削除］</Wovn>をクリックすると、元の状態に戻すことができます。  
    <Img src="/k/kintone/img-ja/app_changename_04.png" alt="スクリーンショット：書式設定を使ってアプリ説明を入力している" />
 
-1. 画面右下の[保存]をクリックします。
+1. 画面右下の<Wovn>［保存］</Wovn>をクリックします。<Wovn></Wovn>
 
-1. 「アプリの設定」画面で、[アプリを更新]をクリックします。
+1. <Wovn>［アプリの設定］</Wovn>画面で、<Wovn>［アプリを更新］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn>
 
-1. 「アプリを更新」のダイアログで、[アプリを更新]をクリックします。
+1. <Wovn>［アプリを更新］</Wovn>ダイアログで、<Wovn>［アプリを更新］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn>
