--- a/kintone-help-astro-poc/src/pages/ja/app/setup/followup/delete_sales_pack.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/followup/delete_sales_pack.mdx
@@ -11,9 +11,10 @@ import Heading from "@/components/Heading.astro";
 import Hint from "@/components/Hint.astro";
 import Img from "@/components/Img.astro";
 import Note from "@/components/Note.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
-営業支援パックは、顧客管理、案件管理、活動履歴の3つのアプリで構成され、各アプリのルックアップフィールドと関連レコード一覧フィールドで紐づけされています。  
+営業支援パックは、顧客管理、案件管理、活動履歴の3つのアプリで構成され、各アプリの<Wovn>［ルックアップ］</Wovn>フィールドと<Wovn>［関連レコード一覧］</Wovn>フィールドで紐づけされています。<Wovn></Wovn><Wovn></Wovn>  
 「まとめて削除機能」を利用して、これらのアプリをまとめて削除できます。
 
 「まとめて削除機能」を利用するには、営業支援パックの3つのアプリすべての管理権限が必要です。
@@ -32,21 +33,21 @@ import Note from "@/components/Note.astro";
 
 1. 営業支援パックのいずれかのアプリを開きます。
 
-1. 「レコードの一覧」画面で、画面右上にある歯車の形をした[アプリを設定]アイコンをクリックします。  
-   <Img src="/k/kintone/img/settings_new_icon.png" alt="スクリーンショット：[アプリを設定]アイコンが枠線で強調されている" />
+1. <Wovn>［レコードの一覧］</Wovn>画面で、画面右上にある歯車の形をした<Wovn>［アプリを設定］</Wovn>アイコンをクリックします。<Wovn></Wovn><Wovn></Wovn>  
+   <Img src="/k/kintone/img/settings_new_icon.png" alt="スクリーンショット：［アプリを設定］アイコンが枠線で強調されている" />
 
-1. 「アプリの設定」画面で、[設定]タブの「アプリの削除」にある[アプリを削除する]をクリックします。
+1. <Wovn>［アプリの設定］</Wovn>画面で、<Wovn>［設定］</Wovn>タブの<Wovn>［アプリの削除］</Wovn>にある<Wovn>［アプリを削除する］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn><Wovn></Wovn><Wovn></Wovn>
 
-1. 「アプリの削除」ダイアログで、[このアプリを削除]をクリックします。
+1. <Wovn>［アプリの削除］</Wovn>ダイアログで、<Wovn>［このアプリを削除］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn>
 
-1. 「削除の実行」ダイアログで、[削除の実行]をクリックします。  
-   <Img src="/k/kintone/img-ja/delete_app_img3.png" alt="スクリーンショット：[削除の実行]を枠線で強調している" />
+1. <Wovn>［削除の実行］</Wovn>ダイアログで、<Wovn>［削除の実行］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn>  
+   <Img src="/k/kintone/img-ja/delete_app_img3.png" alt="スクリーンショット：［削除の実行］を枠線で強調している" />
 
-1. 「このアプリを参照しているアプリが見つかりました」ダイアログに、営業支援パックに含まれる、ほかの2つのアプリ（直接参照）が表示されます。また、それら2つのアプリを参照しているアプリ（間接参照）がある場合は、そのアプリも表示されます。  
+1. <Wovn>［このアプリを参照しているアプリが見つかりました］</Wovn>ダイアログに、営業支援パックに含まれる、ほかの2つのアプリ（直接参照）が表示されます。また、それら2つのアプリを参照しているアプリ（間接参照）がある場合は、そのアプリも表示されます。  
    <Img src="/k/kintone/img-ja/delete_app_img4.png" alt="スクリーンショット：「このアプリを参照しているアプリが見つかりました」ダイアログが表示されている" />
 
-1. 表示されたすべてのアプリを削除しても問題がないことを確認したうえで、[まとめて削除機能を利用してアプリ（\*\*\*個）をまとめて削除]をクリックします。  
-   <Img src="/k/kintone/img-ja/delete_app_img6.png" alt="[スクリーンショット：まとめて削除機能を利用してアプリ（***個）をまとめて削除]を枠線で強調している" />
+1. 表示されたすべてのアプリを削除しても問題がないことを確認したうえで、<Wovn>［まとめて削除機能を利用してアプリ（\*\*\*個）を削除］</Wovn>をクリックします。  
+   <Img src="/k/kintone/img-ja/delete_app_img6.png" alt="スクリーンショット：［まとめて削除機能を利用してアプリ（***個）を削除］を枠線で強調している" />
 
    <Hint>
 
@@ -54,7 +55,7 @@ import Note from "@/components/Note.astro";
 
    </Hint>
 
-1. 「複数アプリの一括削除」ダイアログで、[削除の実行]ボタンをクリックします。  
+1. <Wovn>［複数アプリの一括削除］</Wovn>ダイアログで、<Wovn>［削除の実行］</Wovn>ボタンをクリックします。<Wovn></Wovn><Wovn></Wovn>  
   アプリがまとめて削除されます。
 
 <Heading id="create_delete_sales_pack_20">特定のアプリのみを削除するには</Heading>
@@ -62,22 +63,22 @@ import Note from "@/components/Note.astro";
 削除対象のアプリを直接参照しているアプリが存在する場合、そのままではアプリを単独で削除することはできません。  
 営業支援パック内のアプリを単独で削除するには、ほかのアプリからの参照を解除する必要があります。  
 
-参照関係のあるアプリとフィールドは、アプリ削除時に自動検出されます。検出画面から対象アプリの設定画面にジャンプし、参照を解除する手順を説明します。
+参照関係のあるアプリとフィールドは、アプリ削除時に自動検出されます。検出画面から対象アプリの設定画面にジャンプし、参照を解除する手順を説明します。<Wovn></Wovn>
 
-1. アプリの削除を実行しようとした際に「このアプリを参照しているアプリが見つかりました」ダイアログが表示されたら、[手動で参照を解除]をクリックします。  
-   <Img src="/k/kintone/img-ja/delete_app_img7.png" alt="スクリーンショット：[手動で参照を解除]を枠線で強調している" />
-  [手動で参照を解除]ダイアログが表示され、削除対象のアプリを直接参照しているアプリおよびフィールドが表示されます。
+1. アプリの削除をしようとした際に<Wovn>［このアプリを参照しているアプリが見つかりました］</Wovn>ダイアログが表示されたら、<Wovn>［手動で参照を解除］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn>  
+   <Img src="/k/kintone/img-ja/delete_app_img7.png" alt="スクリーンショット：［手動で参照を解除］を枠線で強調している" />
+  <Wovn>［手動で参照を解除］</Wovn>ダイアログが表示され、削除対象のアプリを直接参照しているアプリおよびフィールドが表示されます。<Wovn></Wovn>
 
-1. 「手動で参照を解除」ダイアログに表示されたリンクをクリックし、アプリの設定画面にジャンプします。  
+1. <Wovn>［手動で参照を解除］</Wovn>ダイアログに表示されたリンクをクリックし、アプリの設定画面にジャンプします。<Wovn></Wovn><Wovn></Wovn>  
    <Img src="/k/kintone/img-ja/delete_app_img8.png" alt="スクリーンショット：「アプリの設定を開く」リンクを枠線で強調している" />
 
-1. 「手動で参照を解除」ダイアログに表示されていたルックアップフィールドまたは関連レコード一覧フィールドを削除し、アプリを更新します。  
-  例：ここでは、手順2のダイアログで表示された「案件名」（ルックアップフィールド）および「案件詳細」（関連レコード一覧フィールド）を削除します。
+1. <Wovn>［手動で参照を解除］</Wovn>ダイアログに表示されていた<Wovn>［ルックアップ］</Wovn>フィールドまたは<Wovn>［関連レコード一覧］</Wovn>フィールドを削除し、アプリを更新します。<Wovn></Wovn><Wovn></Wovn><Wovn></Wovn>  
+  例：ここでは、手順2のダイアログで表示された「案件名」（<Wovn>［ルックアップ］</Wovn>フィールド）および「案件詳細」（<Wovn>［関連レコード一覧］</Wovn>フィールド）を削除します。<Wovn></Wovn><Wovn></Wovn>
    <Img src="/k/kintone/img-ja/delete_app_img9.png" alt="スクリーンショット：「案件名」と「案件詳細」を枠線で強調している" />
 
 1. 手順2～3を繰り返し、すべての参照を解除します。
 
-1. 削除したいアプリの設定画面をもう一度開き、[設定]タブの「アプリの削除」の[アプリを削除する]をクリックしてアプリの削除をやり直します。
+1. 削除したいアプリの設定画面をもう一度開き、<Wovn>［設定］</Wovn>タブの<Wovn>［アプリの削除］</Wovn>の<Wovn>［アプリを削除する］</Wovn>をクリックしてアプリの削除をやり直します。<Wovn></Wovn><Wovn></Wovn><Wovn></Wovn><Wovn></Wovn>
 
 <Note>
 
@@ -93,7 +94,7 @@ import Note from "@/components/Note.astro";
 
 <Heading id="create_delete_sales_pack_30">アプリを削除しようとしてエラーが表示されたときは</Heading>
 
-[削除の実行]をクリックしてエラーが表示された場合、営業支援パックのいずれかのアプリ、またはそれらを参照しているアプリに管理者権限がないと考えられます。
+<Wovn>［削除の実行］</Wovn>をクリックしてエラーが表示された場合、営業支援パックのいずれかのアプリ、またはそれらを参照しているアプリに管理者権限がないと考えられます。<Wovn></Wovn>
 
 エラー例：  
 アプリを削除できません。「\*\*\*」アプリのルックアップフィールド「\*\*\*」から参照されています。参照元のルックアップフィールドの設定を変更するか、または削除してください。
@@ -101,5 +102,5 @@ import Note from "@/components/Note.astro";
 
 この場合は、以下のいずれかの方法で対処してください。
 
-* エラーに表示されたアプリの管理者に、該当のルックアップフィールドまたは関連レコード一覧の削除を依頼する。
+* エラーに表示されたアプリの管理者に、該当の<Wovn>［ルックアップ］</Wovn>フィールドまたは<Wovn>［関連レコード一覧］</Wovn>の削除を依頼する。<Wovn></Wovn><Wovn></Wovn>
 * 削除対象のアプリ、およびエラーに表示されたアプリの両方の管理権限を持つ管理者に、アプリの削除を依頼する。
