--- a/kintone-help-astro-poc/src/pages/ja/app/setup/followup/favorite.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/followup/favorite.mdx
@@ -9,6 +9,7 @@ layout: "@/layouts/PageLayout.astro"
 
 import Heading from "@/components/Heading.astro";
 import Img from "@/components/Img.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
 重要なアプリやよく使うアプリは、お気に入りに登録できます。  
@@ -16,24 +17,25 @@ import Img from "@/components/Img.astro";
 
 <Heading id="create_app_favorite_10">アプリをお気に入りに登録する</Heading>
 
-お気に入りに登録したいアプリを開き、画面右上のピンの形をした[お気に入り]アイコンをクリックすると、アプリをお気に入りに登録できます。  
-<Img src="/k/kintone/img-ja/favorite_img4_1_1.png" alt="スクリーンショット：アプリの画面の右上にある[お気に入り]アイコンを枠線で強調している" />
+お気に入りに登録したいアプリを開き、画面右上のピンの形をした<Wovn>［お気に入り］</Wovn>アイコンをクリックすると、アプリをお気に入りに登録できます。<Wovn></Wovn>  
+<Img src="/k/kintone/img-ja/favorite_img4_1_1.png" alt="スクリーンショット：アプリの画面の右上にある［お気に入り］アイコンを枠線で強調している" />
 
-なお、お気に入りに登録したアプリは、ポータルの「アプリ」エリアやサイドメニューから「お気に入りのアプリ」を選ぶと、一覧で表示できます。新しくお気に入りに登録したアプリは、「お気に入りのアプリ」の一覧内の一番下に追加されます。  
-<Img src="/k/kintone/img-ja/sort_favorite_app_img03.png" alt="スクリーンショット：{{&lt; kintone &gt;}}のポータルで「アプリ」エリアを枠線で強調している" />
+なお、お気に入りに登録したアプリは、ポータルの<Wovn>［アプリ］</Wovn>エリアやサイドメニューから<Wovn>［お気に入りのアプリ］</Wovn>を選ぶと、一覧で表示できます。新しくお気に入りに登録したアプリは、<Wovn>［お気に入りのアプリ］</Wovn>の一覧内の一番下に追加されます。<Wovn></Wovn><Wovn></Wovn><Wovn></Wovn>  
+<Img src="/k/kintone/img-ja/sort_favorite_app_img03.png" alt="スクリーンショット：{{&lt; kintone &gt;}}のポータルで［アプリ］エリアを枠線で強調している" />
 
-また、「お気に入りのアプリ」の一覧内のアプリを並び替えることも可能です。操作方法については、「[お気に入りのアプリを並び替える](/k/ja/id/040685.html)」を参照してください。
+また、<Wovn>［お気に入りのアプリ］</Wovn>の一覧内のアプリを並び替えることも可能です。詳細は、次のページを参照してください。  
+[お気に入りのアプリを並び替える](/k/ja/id/040685.html)
 
 <Heading id="create_app_favorite_20">アプリのお気に入りを解除する</Heading>
 
 <Heading level={3} id="create_app_favorite_2010">各アプリ画面から解除する方法</Heading>
 
-お気に入りを解除したいアプリを開き、画面右上のピンの形をした[お気に入り]アイコンをクリックします。  
-<Img src="/k/kintone/img-ja/favorite_img4_1_1.png" alt="スクリーンショット：アプリの画面の右上にある[お気に入り]アイコンを枠線で強調している" />
+お気に入りを解除したいアプリを開き、画面右上のピンの形をした<Wovn>［お気に入り］</Wovn>アイコンをクリックします。<Wovn></Wovn>  
+<Img src="/k/kintone/img-ja/favorite_img4_1_1.png" alt="スクリーンショット：アプリの画面の右上にある［お気に入り］アイコンを枠線で強調している" />
 
-<Heading level={3} id="create_app_favorite_2020">「お気に入りのアプリ」の一覧から解除する方法</Heading>
+<Heading level={3} id="create_app_favorite_2020">&lt;Wovn&gt;［お気に入りのアプリ］&lt;/Wovn&gt;の一覧から解除する方法</Heading>
 
-お気に入りのアプリを整理したい場合などは、一覧から解除することもできます。ポータルの「アプリ」エリアのドロップダウンリストで、「お気に入りのアプリ」の右端に表示される [編集]をクリックします。  
-<Img src="/k/kintone/img-ja/sort_favorite_app_img01.png" alt="スクリーンショット：「アプリ」エリアのドロップダウンリストの[編集]を枠線で強調している" />
-ダイアログでアプリの行にカーソルを合わせ、[お気に入りを解除]をクリックして[保存]をクリックすると、お気に入りを解除できます。  
-<Img src="/k/kintone/img-ja/sort_favorite_app_img04.png" alt="スクリーンショット：「お気に入りのアプリ」の設定ダイアログで[お気に入りを解除]を枠線で強調している" />
+お気に入りのアプリを整理したい場合などは、一覧から解除できます。ポータルの<Wovn>［アプリ］</Wovn>エリアのドロップダウンリストで、<Wovn>［お気に入りのアプリ］</Wovn>の右端に表示される<Wovn>［編集］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn><Wovn></Wovn>  
+<Img src="/k/kintone/img-ja/sort_favorite_app_img01.png" alt="スクリーンショット：［アプリ］エリアのドロップダウンリストの［編集］を枠線で強調している" />
+ダイアログでアプリの行にカーソルを合わせ、<Wovn>［お気に入りを解除］</Wovn>をクリックして<Wovn>［保存］</Wovn>をクリックすると、お気に入りを解除できます。<Wovn></Wovn><Wovn></Wovn>  
+<Img src="/k/kintone/img-ja/sort_favorite_app_img04.png" alt="スクリーンショット：［お気に入りのアプリ］の設定ダイアログで［お気に入りを解除］を枠線で強調している" />
