--- a/kintone-help-astro-poc/src/pages/ja/app/setup/followup/theme.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/followup/theme.mdx
@@ -9,6 +9,7 @@ layout: "@/layouts/PageLayout.astro"
 import Heading from "@/components/Heading.astro";
 import Img from "@/components/Img.astro";
 import Note from "@/components/Note.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
 デザインテーマの設定で、フォームやレコード一覧の配色を変更できます。  
@@ -36,17 +37,17 @@ import Note from "@/components/Note.astro";
 
 <Heading id="app_generalsettings_theme_20">手順</Heading>
 
-1. 「レコードの一覧」画面で、画面右上にある歯車の形をした[アプリを設定]アイコンをクリックします。  
-   <Img src="/k/kintone/img/settings_new_icon.png" alt="スクリーンショット：[アプリを設定]アイコンが枠線で強調されている" />
+1. <Wovn>［レコードの一覧］</Wovn>画面で、画面右上にある歯車の形をした<Wovn>［アプリを設定］</Wovn>アイコンをクリックします。<Wovn></Wovn><Wovn></Wovn>  
+   <Img src="/k/kintone/img/settings_new_icon.png" alt="スクリーンショット：［アプリを設定］アイコンが枠線で強調されている" />
 
-1. 「アプリの設定」画面で、[設定]タブの「一般設定」にある[デザインテーマ]をクリックします。
+1. <Wovn>［アプリの設定］</Wovn>画面で、<Wovn>［設定］</Wovn>タブの<Wovn>［一般設定］</Wovn>にある<Wovn>［デザインテーマ］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn><Wovn></Wovn><Wovn></Wovn>
 
-1. 「デザインテーマの設定」画面で、デザインテーマを選択します。
+1. <Wovn>［デザインテーマの設定］</Wovn>画面で、デザインテーマを選択します。
 
-1. 画面右下の[保存]をクリックします。  
-   <Img src="/k/kintone/img-ja/theme_img02.png" alt="スクリーンショット：[保存]を枠線で強調している" />
+1. 画面右下の<Wovn>［保存］</Wovn>をクリックします。<Wovn></Wovn>  
+   <Img src="/k/kintone/img-ja/theme_img02.png" alt="スクリーンショット：［保存］を枠線で強調している" />
 
-1. 画面右上の[アプリを更新]をクリックします。  
-   <Img src="/k/kintone/img-ja/theme_img03.png" alt="スクリーンショット：[アプリを更新]を枠線で強調している" />
+1. 画面右上の<Wovn>［アプリを更新］</Wovn>をクリックします。<Wovn></Wovn>  
+   <Img src="/k/kintone/img-ja/theme_img03.png" alt="スクリーンショット：［アプリを更新］を枠線で強調している" />
 
-1. 「アプリを更新」ダイアログで[アプリを更新]をクリックします。
+1. <Wovn>［アプリを更新］</Wovn>ダイアログで<Wovn>［アプリを更新］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn>
