--- a/kintone-help-astro-poc/src/pages/ja/app/setup/template/add_template.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/template/add_template.mdx
@@ -11,9 +11,10 @@ import Img from "@/components/Img.astro";
 import Kintone from "@/components/Kintone.astro";
 import Note from "@/components/Note.astro";
 import Reference from "@/components/Reference.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
-システム管理画面から、作成済みのアプリをテンプレート化して<Kintone />に登録します。  
+<Wovn>［<Kintone />システム管理］</Wovn>画面から、作成済みのアプリをテンプレート化して<Kintone />に登録します。<Wovn></Wovn>  
 アプリをテンプレート化して<Kintone />に登録すると、同じ<Kintone />を利用しているユーザーが、登録済みのテンプレートからアプリを作成できるようになります。  
 [登録済みのテンプレートからアプリを作成する](/k/ja/id/040632.html)
 
@@ -24,7 +25,8 @@ import Reference from "@/components/Reference.astro";
 
 <Note>
 
-* 一部の設定項目は、テンプレートに含まれません。詳しくは、「[アプリテンプレートに含まれない設定](/k/ja/id/04021.html)」を参照してください。
+* 一部の設定項目は、テンプレートに含まれません。詳細は、次のページを参照してください。  
+[アプリテンプレートに含まれない設定](/k/ja/id/04021.html)
 * 運用中のアプリだけをテンプレート化できます。
 * 運用環境に反映されたアプリの設定だけが、テンプレート化されます。
 
@@ -33,25 +35,25 @@ import Reference from "@/components/Reference.astro";
 <Hint>
 
 作成したテンプレートをファイルに書き出す場合は、テンプレート作成後に、別途アプリテンプレートをファイルに書き出す必要があります。  
-なお、アプリの設定画面からは、アプリテンプレートの作成とダウンロードを一括で行うことができます。  
+なお、<Wovn>［アプリの設定］</Wovn>画面からは、アプリテンプレートの作成とダウンロードを一括で行うことができます。  
 [<Kintone />に登録されているアプリテンプレートをファイルに書き出す](/k/ja/id/04019.html)
 [アプリをテンプレートとしてダウンロードする](/k/ja/id/040493.html)
 
 </Hint>
 
-1. <Kintone />システム管理画面を開きます。  
-  [<Kintone />システム管理画面を開く](/k/ja/id/04046.html)
+1. <Wovn>［<Kintone />システム管理］</Wovn> 画面を開きます。  
+  [［<Kintone />システム管理］画面を開く](/k/ja/id/04046.html)
 
-1. [アプリテンプレート]をクリックします。
+1. <Wovn>［アプリテンプレート］</Wovn>をクリックします。<Wovn></Wovn>
 
-1. [作成]をクリックします。
+1. <Wovn>［作成］</Wovn>をクリックします。<Wovn></Wovn>
 
-1. テンプレート化するアプリを選び、[次へ]をクリックします。  
+1. テンプレート化するアプリを選び、<Wovn>［次へ］</Wovn>をクリックします。<Wovn></Wovn>  
   複数のアプリを選ぶと、選んだアプリがパック化されたテンプレートを作成できます。
 
-1. 各項目を入力し、[保存]をクリックします。  
-  作成したテンプレートが「アプリテンプレートの一覧」に追加され、アプリストアの[登録済みのテンプレートから作成]で選択できるようになります。
-   <Img src="/k/kintone/img-ja/template_add_template_img01.png" alt="スクリーンショット：「アプリテンプレートの一覧」画面" />
+1. 各項目を入力し、<Wovn>［保存］</Wovn>をクリックします。<Wovn></Wovn>  
+  作成したテンプレートが<Wovn>［アプリテンプレートの一覧］</Wovn>に追加され、アプリストアの<Wovn>［登録済みのテンプレートから作成］</Wovn>で選択できるようになります。<Wovn></Wovn>
+   <Img src="/k/kintone/img-ja/template_add_template_img01.png" alt="スクリーンショット：［アプリテンプレートの一覧］画面" />
 
 <Reference>
 
