--- a/kintone-help-astro-poc/src/pages/ja/app/setup/template/edit_delete_template.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/template/edit_delete_template.mdx
@@ -9,6 +9,7 @@ layout: "@/layouts/PageLayout.astro"
 import Heading from "@/components/Heading.astro";
 import Img from "@/components/Img.astro";
 import Kintone from "@/components/Kintone.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
 <Kintone />に登録されているアプリテンプレートは、編集、または削除できます。  
@@ -26,18 +27,18 @@ import Kintone from "@/components/Kintone.astro";
 
 手順は次のとおりです。
 
-1. <Kintone />システム管理画面を開きます。  
-  [<Kintone />システム管理画面を開く](/k/ja/id/04046.html)
+1. <Wovn>［<Kintone />システム管理］</Wovn>画面を開きます。  
+  [［<Kintone />システム管理］画面を開く](/k/ja/id/04046.html)
 
-1. [アプリテンプレート]をクリックします。
+1. <Wovn>［アプリテンプレート］</Wovn>をクリックします。<Wovn></Wovn>
 
-1. 変更したいアプリテンプレート右上の歯車の形をした設定アイコンをクリックします。
+1. 変更したいアプリテンプレート右上の歯車の形をした設定アイコンをクリックします。<Wovn></Wovn>
    <Img src="/k/kintone/img-ja/edit_delete_template_01.png" alt="スクリーンショット：アプリテンプレートの設定アイコン" />
 
 1. 各項目を変更します。  
 複数のアプリをパック化したテンプレートの場合、テンプレートの説明は複数アプリ分編集できます。
 
-1. [保存]をクリックします。
+1. <Wovn>［保存］</Wovn>をクリックします。<Wovn></Wovn>
 
 以上の操作で、変更内容が保存されます。
 
@@ -45,17 +46,17 @@ import Kintone from "@/components/Kintone.astro";
 
 <Kintone />に登録されているアプリテンプレートを削除する手順は次のとおりです。
 
-1. <Kintone />システム管理画面を開きます。  
-  [<Kintone />システム管理画面を開く](/k/ja/id/04046.html)
+1. <Wovn>［<Kintone />システム管理］</Wovn>画面を開きます。  
+  [［<Kintone />システム管理］画面を開く](/k/ja/id/04046.html)
 
-1. [アプリテンプレート]をクリックします。
+1. <Wovn>［アプリテンプレート］</Wovn>をクリックします。<Wovn></Wovn>
 
-1. 画面左上の[削除]をクリックします。
+1. 画面左上の<Wovn>［削除］</Wovn>をクリックします。<Wovn></Wovn>
 
 1. 削除したいアプリテンプレートにチェックを入れます。
 
-1. 画面左上の[削除]をクリックします。
+1. 画面左上の<Wovn>［削除］</Wovn>をクリックします。<Wovn></Wovn>
 
-1. メッセージを確認のうえ、[削除]をクリックします。
+1. メッセージを確認のうえ、<Wovn>［削除］</Wovn>をクリックします。<Wovn></Wovn>
 
 以上の操作で、アプリテンプレートが削除されます。
