--- a/kintone-help-astro-poc/src/pages/ja/app/setup/template/export_apptemplate.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/template/export_apptemplate.mdx
@@ -10,6 +10,7 @@ import Hint from "@/components/Hint.astro";
 import Kintone from "@/components/Kintone.astro";
 import Note from "@/components/Note.astro";
 import Reference from "@/components/Reference.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
 <Kintone />に登録されているアプリテンプレートをファイルに書き出します。複数のテンプレートを選択して、まとめて1つのファイルに書き出すこともできます。  
@@ -18,30 +19,30 @@ import Reference from "@/components/Reference.astro";
 <Note>
 
 * 1つのファイルに含められるアプリテンプレートは10個までです。
-* <Kintone />システム管理画面からテンプレート作成する際に、「イメージ」に6ファイル以上アップロードしている場合は、6ファイル目以降のイメージは書き出されません。
+* <Wovn>［<Kintone />システム管理］</Wovn>画面からテンプレート作成する際に、<Wovn>［イメージ］</Wovn>に6ファイル以上アップロードしている場合は、6ファイル目以降のイメージは書き出されません。
 
 </Note>
 
 <Hint>
 
-アプリの設定画面からも、テンプレートファイルを作成してダウンロードできます。この操作には、テンプレートを作成したいアプリの管理権限および<Kintone />のシステム管理権限が必要です。  
+<Wovn>［アプリの設定］</Wovn>画面からも、テンプレートファイルを作成してダウンロードできます。<Wovn></Wovn>この操作には、テンプレートを作成したいアプリの管理権限および<Kintone />のシステム管理権限が必要です。  
 [アプリをテンプレートとしてダウンロードする](/k/ja/id/040493.html)
 
 </Hint>
 
-1. <Kintone />システム管理画面を開きます。  
-  [<Kintone />システム管理画面を開く](/k/ja/id/04046.html)
+1. <Wovn>［<Kintone />システム管理］</Wovn>画面を開きます。<Wovn></Wovn>  
+  [［<Kintone />システム管理］画面を開く](/k/ja/id/04046.html)
 
-1. [アプリテンプレート]をクリックします。
+1. <Wovn>［アプリテンプレート］</Wovn>をクリックします。<Wovn></Wovn>
 
-1. [書き出す]をクリックします。
+1. <Wovn>［書き出す］</Wovn>をクリックします。<Wovn></Wovn>
 
 1. 書き出すテンプレートのチェックボックスを選択します。  
-  複数のテンプレートを選択することもできます。
+  複数のテンプレートを選択できます。
 
-1. [書き出す]をクリックします。
+1. <Wovn>［書き出す］</Wovn>をクリックします。<Wovn></Wovn>
 
-1. 必要に応じてファイル名を変更し、[書き出す]をクリックします。  
+1. 必要に応じてファイル名を変更し、<Wovn>［書き出す］</Wovn>をクリックします。<Wovn></Wovn>  
   アプリのテンプレートファイルが書き出されます。
 
 <Reference>
