--- a/kintone-help-astro-poc/src/pages/ja/app/setup/template/import_template.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/template/import_template.mdx
@@ -12,6 +12,7 @@ import Img from "@/components/Img.astro";
 import Kintone from "@/components/Kintone.astro";
 import Note from "@/components/Note.astro";
 import Reference from "@/components/Reference.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
 <Kintone />の外に保存されているテンプレートファイルを読み込んで、<Kintone />にアプリテンプレートを登録する方法を説明します。  
@@ -35,21 +36,21 @@ import Reference from "@/components/Reference.astro";
 
 </Note>
 
-1. <Kintone />システム管理画面を開きます。  
-  [<Kintone />システム管理画面を開く](/k/ja/id/04046.html)
+1. <Wovn>［<Kintone />システム管理］</Wovn>画面を開きます。<Wovn></Wovn>  
+  [［<Kintone />システム管理］画面を開く](/k/ja/id/04046.html)
 
-1. [アプリテンプレート]をクリックします。  
-   <Img src="/k/kintone/img-ja/import_template_01.png" alt="スクリーンショット：[アプリテンプレート]のリンクを枠線で強調している" />
+1. <Wovn>［アプリテンプレート］</Wovn>をクリックします。<Wovn></Wovn>  
+   <Img src="/k/kintone/img-ja/import_template_01.png" alt="スクリーンショット：［アプリテンプレート］のリンクを枠線で強調している" />
 
-1. [読み込む]をクリックします。  
-   <Img src="/k/kintone/img-ja/import_template_02.png" alt="スクリーンショット：[読み込む]ボタンを枠線で強調している" />
+1. <Wovn>［読み込む］</Wovn>をクリックします。<Wovn></Wovn>  
+   <Img src="/k/kintone/img-ja/import_template_02.png" alt="スクリーンショット：［読み込む］ボタンを枠線で強調している" />
 
-1. [参照]をクリックし、zipファイルを選択します。  
-   <Img src="/k/kintone/img-ja/import_template_03.png" alt="スクリーンショット：[参照]ボタンを枠線で強調している" />
+1. <Wovn>［参照］</Wovn>をクリックし、zipファイルを選択します。<Wovn></Wovn>  
+   <Img src="/k/kintone/img-ja/import_template_03.png" alt="スクリーンショット：［参照］ボタンを枠線で強調している" />
 
-1. [読み込む]をクリックします。  
+1. <Wovn>［読み込む］</Wovn>をクリックします。<Wovn></Wovn>  
 
-   <Img src="/k/kintone/img-ja/import_template_04.png" alt="スクリーンショット：[読み込む]ボタンを枠線で強調している" />
+   <Img src="/k/kintone/img-ja/import_template_04.png" alt="スクリーンショット：［読み込む］ボタンを枠線で強調している" />
   <Kintone />にアプリテンプレートが登録され、アプリテンプレートから新しいアプリを作成できるようになります。
 
 <Reference>
