--- a/kintone-help-astro-poc/src/pages/ja/app/setup/template/template_settings.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/template/template_settings.mdx
@@ -8,6 +8,7 @@ layout: "@/layouts/PageLayout.astro"
 
 import CybozuCom from "@/components/CybozuCom.astro";
 import Heading from "@/components/Heading.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
 アプリテンプレートに含まれない設定は、次のとおりです。
@@ -23,12 +24,12 @@ import Heading from "@/components/Heading.astro";
 さらに、<CybozuCom />に登録したユーザー、組織、またはグループの情報を使って設定している場合、その設定内容はアプリテンプレートに含まれません。
 アプリテンプレートに含まれない設定は、次のとおりです。
 
-* ユーザー選択フィールド、組織選択フィールド、グループ選択フィールドにおける、選択肢の候補や初期値
-* ルックアップフィールドの「絞り込みの初期設定」の条件
+* <Wovn>［ユーザー選択］</Wovn>フィールド、<Wovn>［組織選択］</Wovn>フィールド、<Wovn>［グループ選択］</Wovn>フィールドにおける、選択肢の候補や初期値<Wovn></Wovn><Wovn></Wovn><Wovn></Wovn>
+* <Wovn>［ルックアップ］</Wovn>フィールドの<Wovn>［絞り込みの初期設定］</Wovn>の条件<Wovn></Wovn><Wovn></Wovn>
 * 一覧やグラフの絞り込み条件
 * プロセス管理の作業者
-* プロセス管理の「アクションの実行条件」の条件
-* アプリの条件通知／レコードの条件通知／リマインダーの条件通知の、通知先や条件
+* プロセス管理の<Wovn>［アクションが実行できる条件］</Wovn>の条件<Wovn></Wovn><Wovn></Wovn>
+* アプリの条件通知／レコードの条件通知／リマインダーの条件通知の、通知先や条件<Wovn></Wovn><Wovn></Wovn><Wovn></Wovn>
 
 なお、次の値はアプリテンプレートに含まれます。
 
@@ -40,8 +41,8 @@ import Heading from "@/components/Heading.astro";
 
 <Heading id="template_template_settings_10">補足事項</Heading>
 
-* アプリ管理者用メモは、設定をすることでアプリテンプレートに含めることができます。  
-  アプリテンプレートに含めたい場合は、「アプリ管理者用メモを編集」画面で、[アプリテンプレートやアプリの再利用時にこのメモの内容を含める]にチェックを入れてください。  
-  手順の詳細は、次のページを参照してください。  
+* アプリ管理者用メモは、設定をすることでアプリテンプレートに含めることができます<Wovn></Wovn>。  
+  アプリテンプレートに含めたい場合は、<Wovn>［アプリ管理者用メモを編集］</Wovn>画面で、<Wovn>［アプリテンプレートやアプリの再利用時にこのメモの内容を含める］</Wovn>にチェックを入れてください<Wovn></Wovn><Wovn></Wovn>。  
+  手順の詳細は、次の項目を参照してください。  
   [アプリ管理者用メモを閲覧／編集する](/k/ja/id/040558.html#app_settings_notes_for_app_administrators_20)
-* アクションの「アクションの利用者」は、設定されている値に関わらず、アプリテンプレートでは「Everyone」（すべてのユーザー）に設定されます。
+* アクションの<Wovn>［アクションの利用者］</Wovn>は、設定されている値にかかわらず、アプリテンプレートでは<Wovn>［Everyone］</Wovn>（すべてのユーザー）に設定されます<Wovn></Wovn><Wovn></Wovn>。
