--- a/kintone-help-astro-poc/src/pages/ja/guest/space/guestspace_invite.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/guest/space/guestspace_invite.mdx
@@ -15,7 +15,7 @@ import Note from "@/components/Note.astro";
 import Wovn from "@/components/Wovn.astro";
 
 
-ゲストスペースの管理者は、ゲストに招待メールを送信し、ゲストスペースに招待できます。招待したゲストが<Kintone />に登録したかどうかの確認や、ゲストユーザーの削除をすることも可能です。
+ゲストスペースの管理者は、ゲストに招待メールを送信し、ゲストスペースに招待できます。また、招待したゲストが<Kintone />に登録したかどうかの確認や、ゲストユーザーの削除も行えます。
 
 <Heading id="guest_guestspace_invite_10">ゲストを招待する手順</Heading>
 
@@ -44,6 +44,8 @@ import Wovn from "@/components/Wovn.astro";
 [メール通知の形式](/k/ja/id/0403.html#admin_feature_activ_1020)
 * ゲストのアカウントを別の<Kintone />のアカウントと共通化したい場合も、通常のゲストを招待する方法と同じように招待します。招待するときにアカウントの共通化を依頼してください。アカウントの共通化についての詳細は、次のページを参照してください。  
 [ゲストの操作：ゲストアカウントを<Kintone />アカウントと共通化する](/k/ja/id/040644.html)
+* ゲストが初めてログインすると、30日間の試用期間が始まります。試用期間の終了後、ライセンスが自動的に［有料］に切り替わります。詳細は、次のページを参照してください。  
+[ゲストユーザーのライセンスの使用状況を確認する](/k/ja/guest/manage/confirm_guest_license.html)
 
 </Note>
 
