--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/disk_storage/increase.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/disk_storage/increase.mdx
@@ -11,33 +11,34 @@ import Img from "@/components/Img.astro";
 import Kintone from "@/components/Kintone.astro";
 import Slash from "@/components/Slash.astro";
 import SlashUi from "@/components/SlashUi.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
 ディスク容量の追加購入の手続きは、<Slash />共通管理者が行います。
 
-1. <Kintone />の画面上部の歯車の形をした[設定]アイコンをクリックします。  
+1. <Kintone />の画面上部の歯車の形をした<Wovn>［設定］</Wovn>アイコンをクリックします。  
 
-1. [<SlashUi />]をクリックします。  
-   <Img src="/k/kintone/img-ja/disk_storage_increase_img01.png" alt="スクリーンショット：[{{&lt; slash_ui &gt;}}]を枠線で強調している" />
+1. <Wovn>［<SlashUi />］</Wovn>をクリックします。  
+   <Img src="/k/kintone/img-ja/disk_storage_increase_img01.png" alt="スクリーンショット：［{{&lt; slash_ui &gt;}}］を枠線で強調している" />
 
-1. 「契約状況」画面を表示し、[購入状況]をクリックします。  
+1. <Wovn>［契約状況］</Wovn>画面を表示し、<Wovn>［購入状況］</Wovn>をクリックします。  
   契約内容が表示されます。  
-   <Img src="/k/kintone/img-ja/disk_storage_increase_img02.png" alt="スクリーンショット：[契約状況]のリンクと[購入状況]のボタンを枠線で強調している" />
+   <Img src="/k/kintone/img-ja/disk_storage_increase_img02.png" alt="スクリーンショット：［契約状況］のリンクと［購入状況］のボタンを枠線で強調している" />
 
-1. 「Options」セクションの「Storage」で、[MANAGE LICENSE]をクリックします。  
-   <Img src="/k/kintone/img-ja/disk_storage_increase_img03.png" alt="スクリーンショット：[MANAGE LICENSE]を枠線で強調している" />
+1. <Wovn>［Options］</Wovn>セクションの<Wovn>［Storage］</Wovn>で、<Wovn>［MANAGE LICENSE］</Wovn>をクリックします。  
+   <Img src="/k/kintone/img-ja/disk_storage_increase_img03.png" alt="スクリーンショット：［MANAGE LICENSE］を枠線で強調している" />
 
 1. ディスク容量の購入方法を選択し、数量を指定します。  
-  Current Usageには次の数値が表示されます。  
+  <Wovn>［Current Usage］</Wovn>には次の数値が表示されます。  
     * a：ディスク使用量です。  
     * b：「Free Storage \+ Purchased Storage」の合計値です。  
-  Free Storageと追加購入するディスク容量の合計が、ディスク使用量（aの値）より多い数値になるよう指定する必要があります。  
-   <Img src="/k/kintone/img-ja/disk_storage_increase_img04.png" alt="スクリーンショット：Current Usageに表示されているディスク容量を枠線で強調している" />
+  <Wovn>［Free Storage］</Wovn>と追加購入するディスク容量の合計が、ディスク使用量（aの値）より多い数値になるよう指定する必要があります。  
+   <Img src="/k/kintone/img-ja/disk_storage_increase_img04.png" alt="スクリーンショット：［Current Usage］に表示されているディスク容量を枠線で強調している" />
 
-1. 入力内容を確認し、画面右下にある[NEXT]をクリックします。
+1. 入力内容を確認し、画面右下にある<Wovn>［NEXT］</Wovn>をクリックします。
 
-1. 確認画面で更新内容を確認し、[SUBMIT]をクリックします。  
-   <Img src="/k/kintone/img-ja/disk_storage_increase_img05.png" alt="スクリーンショット：[SUBMIT]を枠線で強調している" />
+1. 確認画面で更新内容を確認し、<Wovn>［SUBMIT］</Wovn>をクリックします。  
+   <Img src="/k/kintone/img-ja/disk_storage_increase_img05.png" alt="スクリーンショット：［SUBMIT］を枠線で強調している" />
   契約内容が表示されれば、手続きは完了しています。
 
 1. 契約内容を表示するページを閉じます。  
