--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/address_candidate.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/address_candidate.mdx
@@ -11,36 +11,38 @@ import Heading from "@/components/Heading.astro";
 import Note from "@/components/Note.astro";
 import Reference from "@/components/Reference.astro";
 import SlashUi from "@/components/SlashUi.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
-「@（半角アットマーク）」の後に入力する値が、<SlashUi />の「ユーザー」「組織」「グループ」に設定されている、次のいずれかの文字列と部分一致または完全一致した場合に、宛先指定の候補に表示されます。
+「@（半角アットマーク）」の後に入力する値が、<SlashUi />の<Wovn>［ユーザー］</Wovn><Wovn>［組織］</Wovn><Wovn>［グループ］</Wovn>に設定されている、次のいずれかの文字列と部分一致または完全一致した場合に、宛先指定の候補に表示されます。
 
-<b>宛先が「ユーザー」の場合：</b>
+<b>宛先が<Wovn>［ユーザー］</Wovn>の場合：</b>
 
-* 表示名
-* 別言語での表示名
-* 姓名のよみがな
-* ログイン名
+* <Wovn>［表示名］</Wovn>
+* <Wovn>［別言語での表示名］</Wovn>
+* <Wovn>［よみがな（姓）］</Wovn>
+* <Wovn>［よみがな（名）］</Wovn>
+* <Wovn>［ログイン名］</Wovn>
 
-<b>宛先が「組織」の場合：</b>
+<b>宛先が<Wovn>［組織］</Wovn>の場合：</b>
 
-* 組織名
-* 別言語での表示名
-* 組織コード
+* <Wovn>［組織名］</Wovn>
+* <Wovn>［別言語での表示名］</Wovn>
+* <Wovn>［組織コード］</Wovn>
 
-<b>宛先が「グループ」の場合：</b>
+<b>宛先が<Wovn>［グループ］</Wovn>の場合：</b>
 
-* グループ名
-* グループコード
+* <Wovn>［グループ名］</Wovn>
+* <Wovn>［グループコード］</Wovn>
 
 <Note>
 次のユーザーは、コメントを閲覧できないため宛先指定の候補に表示されません。
 
-* アプリのコメント欄：
+* アプリのコメント欄<Wovn></Wovn>：
   * そのアプリやレコードの閲覧権限を持たないユーザー
 * 非公開のスペースやゲストスペース：
   * そのスペースに参加していないユーザー
-* 非公開のスペースに所属するアプリのコメント欄：
+* 非公開のスペースに所属するアプリのコメント欄<Wovn></Wovn>：
   * そのアプリやレコードの閲覧権限を持たないユーザー
   * そのスペースに参加していないユーザー  
 
@@ -52,7 +54,7 @@ import SlashUi from "@/components/SlashUi.astro";
 
 * 入力文字との前方一致  
 * 過去30日間で宛先指定した頻度  
-* <SlashUi />で設定されているユーザーの「表示優先度」  
+* <SlashUi />で設定されているユーザーの<Wovn>［表示優先度］</Wovn>  
   参考：[ユーザーの表示優先度を設定する](/general/ja/id/020254.html)
 
 <Enabled regions={["JP"]}>
@@ -63,7 +65,7 @@ import SlashUi from "@/components/SlashUi.astro";
 * 半角／全角（日本語および英数字、記号）は区別されません。
 * ひらがな／カタカナは区別されません。
 
-たとえば、「組織名」にカタカナで濁音や半濁音を含む「デパート」と登録されている場合、宛先指定時にひらがなで濁点や半濁点を省いて「てはーと」と入力しても、宛先指定の候補に表示されます。  
+たとえば、<Wovn>［組織名］</Wovn>にカタカナで濁音や半濁音を含む「デパート」と登録されている場合、宛先指定時にひらがなで濁点や半濁点を省いて「てはーと」と入力しても、宛先指定の候補に表示されます。  
 
 ただし、「半角カタカナ＋濁点（゛）／半濁点（゜）」で登録されている場合は、宛先指定時に濁点や半濁点を含む半角カタカナで入力したときのみ、文字列が一致したとみなします。この場合、全角ひらがなや全角カタカナで入力すると、宛先指定の候補には表示されないため、ご注意ください。  
 
