--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/backup_qa.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/backup_qa.mdx
@@ -63,15 +63,16 @@ import Slash from "@/components/Slash.astro";
   [スペースを作成する](/k/ja/id/040692.html)
 
 1. テンプレートを使って、アプリを作成します。  
-  登録済みのテンプレートからアプリを作成、もしくはテンプレートファイルからアプリを作成します。  
-  [登録済みのテンプレートからアプリを作成する](/k/ja/id/040632.html)  
-  [テンプレートファイルからアプリを作成する](/k/ja/id/040627.html)
+  登録済みのテンプレートからアプリを作成、もしくはテンプレートファイルからアプリを作成します。
+
+   * [登録済みのテンプレートからアプリを作成する](/k/ja/id/040632.html)  
+   * [テンプレートファイルからアプリを作成する](/k/ja/id/040627.html)
 
 1. 作成したアプリに、レコード（CSVファイル）を読み込みます。  
    [ファイルからレコードのデータをアプリに読み込む](/k/ja/id/040724.html)
 
 <Hint>
-&#123;&#123;< subtitle >&#125;&#125;バックアップをとっていないアプリ／スペースを誤削除してしまったときは&#123;&#123;< /subtitle >&#125;&#125;
+&#123;&#123;< subtitle >&#125;&#125;バックアップをとっていないアプリ／スペースを誤って削除したとき&#123;&#123;< /subtitle >&#125;&#125;
 
 バックアップをとっていない状態でアプリ／スペースを削除してしまった場合でも、<Slash />共通管理者がアプリ／スペースを復旧できる可能性があります。ただし、削除してから14日以上経過したアプリ／スペースは復旧できません。  
 アプリ／スペースを復旧すると、そのアプリ／スペース内のデータ（一部の例外を除く）が削除時点の状態に戻り、削除前と同様に利用できるようになります。
