--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/disable_plugin_customization.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/disable_plugin_customization.mdx
@@ -11,9 +11,10 @@ import Heading from "@/components/Heading.astro";
 import Img from "@/components/Img.astro";
 import Kintone from "@/components/Kintone.astro";
 import Note from "@/components/Note.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
-kintoneのプラグインを無効にするには、「アプリの設定」の「プラグイン」画面で無効にします。  
+kintoneのプラグインを無効にするには、<Wovn>［アプリの設定］</Wovn>の<Wovn>［プラグイン］</Wovn>画面で無効にします。  
 JavaScript/CSSによるカスタマイズを無効にするには、アプリごとに無効にするか、<Kintone />全体で無効にします。
 
 <Note>
@@ -24,41 +25,44 @@ JavaScript/CSSによるカスタマイズを無効にするには、アプリご
 
 <Heading id="general_disable_plugin_customization_10">プラグインを無効にする</Heading>
 
-「アプリの設定」の「プラグイン」画面で、プラグインを無効にできます。  
+<Wovn>［アプリの設定］</Wovn>の<Wovn>［プラグイン］</Wovn>画面で、プラグインを無効にできます。  
 設定を変更するには、アプリの管理権限が必要です。  
-詳細は、「[プラグインの有効／無効を切り替える](/k/ja/id/040567.html)」を参照してください。
+詳細は、次のページを参照してください。  
+[プラグインの有効／無効を切り替える](/k/ja/id/040567.html)
 
 <Heading id="general_disable_plugin_customization_20">アプリごとにカスタマイズを無効にする</Heading>
 
-「アプリの設定」の「JavaScript / CSSでカスタマイズ」画面で、アプリごとにカスタマイズを無効にできます。  
+<Wovn>［アプリの設定］</Wovn>の<Wovn>［JavaScript / CSSでカスタマイズ］</Wovn>画面で、アプリごとにカスタマイズを無効にできます。  
 設定を変更するには、<Kintone />のシステム管理権限が必要です。
 
 1. カスタマイズを無効にしたいアプリを開きます。
 
-1. 「レコードの一覧」画面で、画面右上にある歯車の形をした[アプリを設定]アイコンをクリックします。  
+1. <Wovn>［レコードの一覧］</Wovn>画面で、画面右上にある歯車の形をした<Wovn>［アプリを設定］</Wovn>アイコンをクリックします。  
    <Img src="/k/kintone/img/settings_new_icon.png" alt="スクリーンショット：[アプリを設定]アイコンが枠線で強調されている" />
 
-1. 「アプリの設定」画面で、[設定]タブの「カスタマイズ／サービス連携」にある[JavaScript / CSSでカスタマイズ]をクリックします。
+1. <Wovn>［アプリの設定］</Wovn>画面で、<Wovn>［設定］</Wovn>タブの<Wovn>［カスタマイズ／サービス連携］</Wovn>にある<Wovn>［JavaScript / CSSでカスタマイズ］</Wovn>をクリックします。
 
-1. 「適用範囲」で、[適用しない]を選択し、右下の[保存]をクリックします。
+1. <Wovn>［適用範囲］</Wovn>で、<Wovn>［適用しない］</Wovn>を選択し、右下の<Wovn>［保存］</Wovn>をクリックします。
 
-1. 画面右上の[アプリを更新]をクリックします。
+1. 画面右上の<Wovn>［アプリを更新］</Wovn>をクリックします。
 
-1. 確認ダイアログで[アプリを更新]をクリックします。
+1. 確認ダイアログで<Wovn>［アプリを更新］</Wovn>をクリックします。
 
-再度有効にする場合は、「[JavaScript/CSSファイルを取り込む](/k/ja/id/040556.html#app_settings_js_customize_10)」を参照してください。
+再度有効にする場合は、次のページを参照してください。  
+[JavaScript/CSSファイルを取り込む](/k/ja/id/040556.html#app_settings_js_customize_10)
 
 <Heading id="general_disable_plugin_customization_30">&lt;Kintone /&gt;全体でカスタマイズを無効にする</Heading>
 
-「<Kintone />システム管理」の「JavaScript / CSSでカスタマイズ」画面で、<Kintone />全体のカスタマイズを無効にできます。  
+<Wovn>［<Kintone />システム管理］</Wovn>の<Wovn>［JavaScript / CSSでカスタマイズ］</Wovn>画面で、<Kintone />全体のカスタマイズを無効にできます。  
 設定を変更するには、<Kintone />のシステム管理権限が必要です。
 
-1. <Kintone />の画面上部の歯車の形をした[設定]アイコンをクリックし、[<Kintone />システム管理]をクリックします。
+1. <Kintone />の画面上部の歯車の形をした<Wovn>［設定］</Wovn>アイコンをクリックし、<Wovn>［<Kintone />システム管理］</Wovn>をクリックします。
 
-1. [JavaScript / CSSでカスタマイズ]をクリックします。
+1. <Wovn>［JavaScript / CSSでカスタマイズ］</Wovn>をクリックします。
 
-1. 「適用範囲」で、[適用しない]を選択します。
+1. <Wovn>［適用範囲］</Wovn>で、<Wovn>［適用しない］</Wovn>を選択します。
 
-1. [保存]をクリックします。
+1. <Wovn>［保存］</Wovn>をクリックします。
 
-再度有効にする場合は、「[JavaScript/CSSファイルを取り込む](/k/ja/id/04042.html#system_customization_javascript_fullcustomize_20)」を参照してください。
+再度有効にする場合は、次のページを参照してください。  
+[JavaScript/CSSファイルを取り込む](/k/ja/id/04042.html#system_customization_javascript_fullcustomize_20)
