--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/not_available_error.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/not_available_error.mdx
@@ -14,14 +14,16 @@ import Note from "@/components/Note.astro";
 import Reference from "@/components/Reference.astro";
 
 
-特定のページにアクセスした際に「権限がありません。CB_NO02」エラーが表示される場合は、そのページにアクセスする権限がありません。  
+特定のページにアクセスした際に次のエラーが表示される場合は、そのページにアクセスする権限がありません。  
+エラー：  
+権限がありません。CB_NO02  
 
 エラー画面の例：
 
-<Img src="/k/kintone/img-ja/general_not_available_error_img01.png" alt="スクリーンショット：「エラー。権限がありません。CB_NO02」が表示された画面" />
-<Img src="/k/kintone/img-ja/general_not_available_error_img02.png" alt="スクリーンショット：「権限がありません。Code: CB_NO02」が表示された画面" />
+<Img src="/k/kintone/img-ja/general_not_available_error_img01.png" alt="スクリーンショット：［エラー。権限がありません。CB_NO02］が表示された画面" />
+<Img src="/k/kintone/img-ja/general_not_available_error_img02.png" alt="スクリーンショット：［権限がありません。Code: CB_NO02］が表示された画面" />
 
-たとえば、次のような場合に「権限がありません。CB_NO02」エラーが表示されます。
+たとえば、次のような場合にエラーが表示されます。
 
 * 管理権限がないアプリの設定画面のURLにアクセスしようとした。
 
@@ -42,8 +44,13 @@ import Reference from "@/components/Reference.astro";
 
 <Note>
 
-「サービスの利用権限がありません。Code: CB_NO02」と表示されて<Kintone />にアクセスできない場合は、次のページを参照してください。  
-[「サービスの利用権限がありません。」と表示されて<Kintone />にアクセスできません](/k/ja/id/040309.html)
+次のエラーが表示されて<Kintone />にアクセスできない場合は、サービスの利用権限がありません。  
+
+エラー：  
+サービスの利用権限がありません。Code: CB_NO02  
+
+詳細は、次のページを参照してください。  
+[［サービスの利用権限がありません。］と表示されて<Kintone />にアクセスできません](/k/ja/id/040309.html)
 
 </Note>
 
