--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/number_of_characters.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/number_of_characters.mdx
@@ -7,6 +7,7 @@ layout: "@/layouts/PageLayout.astro"
 ---
 
 import Note from "@/components/Note.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
 次の欄に記入できる文字数の上限は、65,535文字です。  
@@ -18,11 +19,13 @@ import Note from "@/components/Note.astro";
 * ピープルのコメント
 * メッセージ
 
-文字数の上限を超えた場合、「0文字以上、65,535文字以下で入力します。文字に書式を指定すると、入力可能な文字数が少なくなる場合があります。」というエラーメッセージが表示されます。  
+文字数の上限を超えた場合、次のエラーメッセージが表示されます。  
+エラー：  
+0文字以上、65,535文字以下で入力します。文字に書式を指定すると、入力可能な文字数が少なくなる場合があります。  
 
 <Note>
 
-* リッチエディターなどで文字に書式を指定すると、65,535文字まで入力できない場合があります。  
+* <Wovn>［リッチエディター］</Wovn>などで文字に書式を指定すると、65,535文字まで入力できない場合があります。  
 * 書式を指定しない場合でも、投稿する際にWebブラウザー側で\<div>タグや\<br />タグが自動で入り、65,535文字に満たなくてもエラーが発生する場合があります。  
 * 最少文字数は、文字を記入する箇所によって異なります。  
 
