--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/waiting_time.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/waiting_time.mdx
@@ -11,6 +11,7 @@ layout: "@/layouts/PageLayout.astro"
 import Hint from "@/components/Hint.astro";
 import Kintone from "@/components/Kintone.astro";
 import Reference from "@/components/Reference.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
 利用しているアプリの設定内容／登録内容や、利用状況によっては、<Kintone />の画面の表示速度が遅くなることがあります。  
@@ -29,7 +30,7 @@ import Reference from "@/components/Reference.astro";
 
 * <b>アプリに配置しているフィールド数が多い</b>  
   1つのアプリには500個までのフィールドを配置できますが、配置されているフィールドが多くなるほどデータ量が多くなるため、画面の表示速度が遅くなる場合があります。  
-  多くのフィールドを配置している場合は、削除可能なフィールドがないかどうかや、アプリを分けて運用することなどもご検討ください。また、グループフィールドを配置し、他のフィールドをグループフィールド内に移動すると、表示速度を改善できることがあります。  
+  多くのフィールドを配置している場合は、削除可能なフィールドがないかどうかや、アプリを分けて運用することなどもご検討ください。また、<Wovn>［グループ］</Wovn>フィールドを配置し、他のフィールドを<Wovn>［グループ］</Wovn>フィールド内に移動すると、表示速度を改善できることがあります。  
   [グループ](/k/ja/id/040525.html)
   <Hint>
 
@@ -42,8 +43,8 @@ import Reference from "@/components/Reference.astro";
 レコード内の1つのテーブルに行が増えると1レコードあたりのデータ量が多くなるため、画面の表示速度が遅くなる場合があります。  
 テーブルの行が多くなった場合は、アプリを分けて運用することなどもご検討ください。  
 <br />
-* <b>リッチエディターフィールドに登録されたデータが重い</b>  
-リッチエディターフィールドの登録内容は、HTMLとして保存されます。そのため、他のフィールドに比べてデータが重くなりやすく、登録内容によっては画面の表示速度が遅くなる場合があります。  
+* <b><Wovn>［リッチエディター］</Wovn>フィールドに登録されたデータが重い</b>  
+<Wovn>［リッチエディター］</Wovn>フィールドの登録内容は、HTMLとして保存されます。そのため、他のフィールドに比べてデータが重くなりやすく、登録内容によっては画面の表示速度が遅くなる場合があります。  
 <br />
 * <b>アクセス権が複雑に設定されている</b>  
   アクセス権が複雑に設定されていると、画面の表示速度が遅くなる場合があります。  
@@ -52,7 +53,7 @@ import Reference from "@/components/Reference.astro";
 * <b>レコード一覧の絞り込み条件が複雑に設定されている</b>  
 レコード一覧の絞り込み条件の数に上限はありませんが、複雑な条件が設定されていると、画面の表示速度が遅くなる場合があります。特に、以下のような場合は表示速度に影響が出やすくなります。
 
-  * 「次のキーワードを含む」／「次のキーワードを含まない」を利用した条件を複数設定している
+  * <Wovn>［次のキーワードを含む］</Wovn>／<Wovn>［次のキーワードを含まない］</Wovn>を利用した条件を複数設定している
   * 絞り込み条件やソートに、データが重いフィールドを指定している
 <br />
 * <b>アクセスが集中している</b>  
@@ -60,7 +61,7 @@ import Reference from "@/components/Reference.astro";
 
 <Reference>
 
-以下のページでは、<Kintone />のアプリを設計する方やIT部門の方向けに、<Kintone />の性能を考慮する際のポイントを詳しく解説しています。  
+次のページでは、<Kintone />のアプリを設計する方やIT部門の方向けに、<Kintone />の性能を考慮する際のポイントを詳しく解説しています。  
 [性能上の考慮点と改善策](https://kintone.cybozu.co.jp/kintone-signpost/guide/performance.html)（日本語のみ）
 
 </Reference>
