--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/registration/deleted_user.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/registration/deleted_user.mdx
@@ -43,7 +43,8 @@ import SlashUi from "@/components/SlashUi.astro";
 
 <Heading level={3} id="deleted_user_1020">Privateグループに所属するアプリ</Heading>
 
-「アプリ管理」画面には、Privateグループに所属するアプリが表示されません。そのため、<Slash />共通管理者は「アプリ管理」画面からそのアプリの削除やアプリの設定変更ができません。  
+削除予定のユーザーがPrivateグループに所属するアプリの管理権限を唯一持っている場合、ユーザーを削除すると、そのアプリの管理者がいなくなり、アプリの削除やアプリの設定変更ができなくなります。  
+また、Privateグループに所属するアプリは「アプリ管理」画面に表示されません。そのため、<Slash />共通管理者であっても、「アプリ管理」画面からそのアプリの削除やアプリの設定変更ができません。  
 
 <Heading level={4} id="deleted_user_102010">ユーザーを削除する前の対処</Heading>
 
