--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/space_qa/space_number.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/space_qa/space_number.mdx
@@ -15,7 +15,7 @@ import Reference from "@/components/Reference.astro";
 import SlashUi from "@/components/SlashUi.astro";
 
 
-スペース数やゲストスペース数は、<Kintone />システム管理画面の[スペース管理]<Disabled2 regions={["US"]} />、または<SlashUi />画面&#123;&#123;< /disabled2 >&#125;&#125;から確認できます。
+スペース数やゲストスペース数は、<Kintone />システム管理画面の[スペース管理]<Disabled2 regions={["US"]}>、または<SlashUi />画面</Disabled2>から確認できます。
 
 <Kintone />システム管理画面の[スペース管理]では、スペース数やゲストスペース数とあわせて、スペース名や種別など、スペースの詳細も確認できます。  
 
