--- a/kintone-help-astro-poc/src/pages/ja/utility/app/n_years_later.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/utility/app/n_years_later.mdx
@@ -1,5 +1,5 @@
 ---
-title: "日付や日時フィールドの N 年後などを計算したい"
+title: "N年後などの日付や日時を計算したい"
 weight: 1900
 aliases:
   - "/ja/id/040748"
@@ -8,23 +8,23 @@ layout: "@/layouts/PageLayout.astro"
 
 import Heading from "@/components/Heading.astro";
 import Kintone from "@/components/Kintone.astro";
-import Reference from "@/components/Reference.astro";
 
 
 時間を秒単位にした計算式を設定して、計算する方法があります。  
-<Kintone />では、日付、時刻、日時のフィールドの値はUNIX時刻として扱われます。このため、日付や日時は秒単位で扱い、計算式も秒単位で指定します。たとえば1分間は「60」と入力します。1時間は「3600」または「60\*60」、1日は「86400」または「60\*60\*24」と入力します。
-
-<Heading id="calculation_n_years_later_10">日時フィールドの例</Heading>
-
-日時フィールドと計算フィールドを配置し、計算フィールドに以下の計算式を設定します。
-
-* N <b>年</b>後の計算式：日時+(N\*<b>60\*60\*24\*365</b>)
-* N <b>日</b>後の計算式：日時+(N\*<b>60\*60\*24</b>)
-* N <b>時間</b>後の計算式：日時+(N\*<b>60\*60</b>)
-* N <b>分</b>後の計算式：日時+(N\*<b>60</b>)
-
-<Reference>
-
+<Kintone />では、「日付」「時刻」「日時」のフィールドの値はUNIX時刻として扱われます。このため、日付や日時は秒単位で扱い、計算式も秒単位で指定します。たとえば1分間は「60」と入力します。1時間は「3600」または「60\*60」、1日は「86400」または「60\*60\*24」と入力します。詳細は、次のページを参照してください。  
 [日付、時刻、日時の計算](/k/ja/id/040502.html)
 
-</Reference>
+<Heading id="calculation_n_years_later_10">設定例</Heading>
+
+ここでは、「日時」フィールドに入力されている日時を起点として計算する場合を例に説明します。  
+「日時」フィールドと「計算」フィールドを配置して、「計算」フィールドに次の計算式を入力します。計算結果の表示形式は[日時（例：2012-08-06 2:03）]を選択します。  
+「計算」フィールドについての詳細は、次のページを参照してください。  
+ [計算](/k/ja/id/040517.html)
+
+* N年後の計算式：日時+(N\*60\*60\*24\*365)  
+  この例では1年を365日として計算します。うるう年（366日）に対応した計算はできません。
+* N日後の計算式：日時+(N\*60\*60\*24)
+* N時間後の計算式：日時+(N\*60\*60)
+* N分後の計算式：日時+(N\*60)
+
+N年前など過去について計算する場合は、この計算式の「+」を「-」に変更します。
