--- a/kintone-help-astro-poc/src/pages/ja/app/setup/followup/app_changename.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/followup/app_changename.mdx
@@ -8,20 +8,21 @@ layout: "@/layouts/PageLayout.astro"
 
 import Hint from "@/components/Hint.astro";
 import Img from "@/components/Img.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
-アプリの設定画面で、アプリ名を変更できます。  
+<Wovn>［アプリの設定］</Wovn>画面で、アプリ名を変更できます。<Wovn></Wovn>  
 アプリ名は64文字まで入力できます。また、アプリ名を空欄にすることはできません。
 
 アプリ名の変更方法は次の通りです。
 
-1. 「レコードの一覧」画面で、画面右上にある歯車の形をした[アプリを設定]アイコンをクリックします。  
-   <Img src="/k/kintone/img/settings_new_icon.png" alt="スクリーンショット：[アプリを設定]アイコンが枠線で強調されている" />
+1. <Wovn>［レコードの一覧］</Wovn>画面で、画面右上にある歯車の形をした<Wovn>［アプリを設定］</Wovn>アイコンをクリックします。<Wovn></Wovn><Wovn></Wovn>  
+   <Img src="/k/kintone/img/settings_new_icon.png" alt="スクリーンショット：［アプリを設定］アイコンが枠線で強調されている" />
 
-1. 「アプリの設定」画面で、アプリ名をクリックして、アプリ名を変更します。  
-  アプリ名を入力したら、入力欄の外をクリックしてください。クリックすると、[アプリを更新]ボタンがクリックできるようになります。  
+1. <Wovn>［アプリの設定］</Wovn>画面で、アプリ名をクリックして、アプリ名を変更します。<Wovn></Wovn>  
+  アプリ名を入力したら、入力欄の外をクリックしてください。クリックすると、<Wovn>［アプリを更新］</Wovn>ボタンがクリックできるようになります。<Wovn></Wovn>  
    <Img src="/k/kintone/img-ja/app_changename_01.png" alt="スクリーンショット：アプリ名を入力している" />
-  アプリ名が長い場合は、アプリの設定画面やパンくずリストでは省略表示されます。
+  アプリ名が長い場合は、<Wovn>［アプリの設定］</Wovn>画面やパンくずリストでは省略表示されます。<Wovn></Wovn>
 
    <Hint>
 
@@ -30,7 +31,7 @@ import Img from "@/components/Img.astro";
 
    </Hint>
 
-1. 画面右上の[アプリを更新]をクリックします。  
-   <Img src="/k/kintone/img-ja/app_changename_06.png" alt="スクリーンショット：[アプリを更新]を枠線で囲んでいる" />
+1. 画面右上の<Wovn>［アプリを更新］</Wovn>をクリックします。<Wovn></Wovn>  
+   <Img src="/k/kintone/img-ja/app_changename_06.png" alt="スクリーンショット：［アプリを更新］を枠線で囲んでいる" />
 
-1. 「アプリを更新」ダイアログで、[アプリを更新]をクリックします。
+1. <Wovn>［アプリを更新］</Wovn>ダイアログで、<Wovn>［アプリを更新］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn>
