--- a/kintone-help-astro-poc/src/pages/ja/app/setup/followup/delete_app.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/followup/delete_app.mdx
@@ -12,6 +12,7 @@ import Img from "@/components/Img.astro";
 import Note from "@/components/Note.astro";
 import Slash from "@/components/Slash.astro";
 import Warning from "@/components/Warning.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
 アプリの設定画面から、アプリを削除できます。  
@@ -22,31 +23,34 @@ import Warning from "@/components/Warning.astro";
 <Warning>
 
 アプリを削除すると、アプリ内のすべてのデータ（レコードの内容、コメント、変更履歴、一覧／グラフ、アプリの設定など）も利用できなくなります。  
-念のためレコードの内容を保存しておきたい場合は、レコードをファイルに書き出してからアプリを削除してください。詳しくは、[レコードのバックアップ](/k/ja/id/04030.html)ページを参照してください。
+念のためレコードの内容を保存しておきたい場合は、レコードをファイルに書き出してからアプリを削除してください。詳細は、次のページを参照してください。  
+[レコードのバックアップ](/k/ja/id/04030.html)
 
 </Warning>
 
 <Note>
 
-* アプリ管理画面からも自分が管理権限を持つアプリを削除できます。  
-  削除方法は、「[アプリの管理画面からアプリを削除する](/k/ja/id/04013.html)」を参照してください。
+* <Wovn>［アプリ管理］</Wovn>画面からも自分が管理権限を持つアプリを削除できます。<Wovn></Wovn>  
+  削除方法は、次のページを参照してください。  
+  [［アプリ管理］画面からアプリを削除する](/k/ja/id/04013.html)
 
 * アプリを誤って削除してしまった場合、<Slash />共通管理者がアプリを復旧できる可能性があります。ただし、削除してから14日以上経過したアプリは復旧できません。また、一部の設定は復旧できないなど制限があります。  
-  詳細は、「[削除したアプリを復旧する](/k/ja/id/04016.html)」を参照してください。
+  詳細は、次のページを参照してください。  
+  [削除したアプリを復旧する](/k/ja/id/04016.html)
 
 </Note>
 
 <Heading id="create_app_delete_app_10">アプリを削除するには</Heading>
 
-1. 「レコードの一覧」画面で、画面右上にある歯車の形をした[アプリを設定]アイコンをクリックします。  
-   <Img src="/k/kintone/img/settings_new_icon.png" alt="スクリーンショット：[アプリを設定]アイコンが枠線で強調されている" />
+1. <Wovn>［レコードの一覧］</Wovn>画面で、画面右上にある歯車の形をした<Wovn>［アプリを設定］</Wovn>アイコンをクリックします。<Wovn></Wovn><Wovn></Wovn>  
+   <Img src="/k/kintone/img/settings_new_icon.png" alt="スクリーンショット：［アプリを設定］アイコンが枠線で強調されている" />
 
-1. 「アプリの設定」画面で、[設定]タブをクリックし、「アプリの削除」にある[アプリを削除する]をクリックします。
+1. <Wovn>［アプリの設定］</Wovn>画面で、<Wovn>［設定］</Wovn>タブをクリックし、<Wovn>［アプリの削除］</Wovn>にある<Wovn>［アプリを削除する］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn><Wovn></Wovn><Wovn></Wovn>
 
-1. 「アプリの削除」ダイアログで、[このアプリを削除]をクリックします。
+1. <Wovn>［アプリの削除］</Wovn>ダイアログで、<Wovn>［このアプリを削除］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn>
 
-1. 「削除の実行」ダイアログで、[削除の実行]をクリックします。  
-   <Img src="/k/kintone/img-ja/delete_app_img3.png" alt="スクリーンショット：[削除の実行]を枠線で強調している" />
+1. <Wovn>［削除の実行］</Wovn>ダイアログで、<Wovn>［削除の実行］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn>  
+   <Img src="/k/kintone/img-ja/delete_app_img3.png" alt="スクリーンショット：［削除の実行］を枠線で強調している" />
 
    削除対象のアプリと参照関係のあるアプリがないかどうか、自動的にチェックされます。
 
@@ -54,22 +58,22 @@ import Warning from "@/components/Warning.astro";
     削除が実行されます。以降の操作は必要ありません。
 
     * 参照関係のあるアプリがあった場合：  
-    「このアプリを参照しているアプリが見つかりました」ダイアログが表示されます。次の手順に進んでください。  
-    <Img src="/k/kintone/img-ja/delete_app_img4.png" alt="スクリーンショット：「このアプリを参照しているアプリが見つかりました」ダイアログが表示されている" />
+    <Wovn>［このアプリを参照しているアプリが見つかりました］</Wovn>ダイアログが表示されます。次の手順に進んでください。  
+    <Img src="/k/kintone/img-ja/delete_app_img4.png" alt="スクリーンショット：［このアプリを参照しているアプリが見つかりました］ダイアログが表示されている" />
 
-1. 「このアプリを参照しているアプリが見つかりました」ダイアログに表示されているすべてのアプリをまとめて削除して問題ないかどうか確認します。  
+1. <Wovn>［このアプリを参照しているアプリが見つかりました］</Wovn>ダイアログに表示されているすべてのアプリをまとめて削除して問題ないかどうか確認します。  
    <Img src="/k/kintone/img-ja/delete_app_img5.png" alt="スククリーンショット：削除対象のアプリを参照するアプリを枠線で強調している" />
 
    <Note>
 
-   「このアプリを参照しているアプリが見つかりました」ダイアログには、削除対象アプリを直接参照しているアプリのほかに、間接的に参照しているアプリも表示されます。  
+   <Wovn>［このアプリを参照しているアプリが見つかりました］</Wovn>ダイアログには、削除対象アプリを直接参照しているアプリのほかに、間接的に参照しているアプリも表示されます。  
    たとえばアプリAを削除しようとした場合、アプリAを参照しているアプリB（直接参照）のほか、アプリBを参照しているアプリC（間接参照）があれば、それらも表示されます。「まとめて削除機能」を利用すると、アプリA/B/Cがまとめて削除されます。
    <Img src="/k/kintone/img-ja/delete_app_img10.png" alt="図：3つのアプリの参照関係を表している" />
 
    </Note>
 
-1. 表示されたすべてのアプリをまとめて削除できる場合は、[まとめて削除機能を利用してアプリ（\*\*\*個）をまとめて削除]をクリックします。  
-   <Img src="/k/kintone/img-ja/delete_app_img6.png" alt="スクリーンショット：[まとめて削除機能を利用してアプリ（***個）をまとめて削除]を枠線で強調している" />
+1. 表示されたすべてのアプリをまとめて削除できる場合は、<Wovn>［まとめて削除機能を利用してアプリ（\*\*\*個）を削除］</Wovn>をクリックします。  
+   <Img src="/k/kintone/img-ja/delete_app_img6.png" alt="スクリーンショット：［まとめて削除機能を利用してアプリ（***個）を削除］を枠線で強調している" />
 
    <Hint>
 
@@ -77,7 +81,7 @@ import Warning from "@/components/Warning.astro";
 
    </Hint>
 
-1. 「複数アプリの一括削除」ダイアログで、[削除の実行]ボタンをクリックします。  
+1. <Wovn>［複数アプリの一括削除］</Wovn>ダイアログで、<Wovn>［削除の実行］</Wovn>ボタンをクリックします。<Wovn></Wovn><Wovn></Wovn>  
   アプリがまとめて削除されます。
 
 <Heading level={3} id="create_app_delete_app_1020">ほかのアプリとの参照関係を解除し、アプリを単独で削除するには</Heading>
@@ -85,26 +89,26 @@ import Warning from "@/components/Warning.astro";
 削除対象のアプリを直接参照しているアプリが存在する場合、そのままではアプリを単独で削除できません。  
 アプリを単独で削除するには、ほかのアプリからの参照を解除する必要があります。
 
-参照関係のあるアプリとフィールドは、アプリ削除時に自動検出されます。検出画面から対象アプリの設定画面にジャンプし、参照を解除する手順を説明します。
+参照関係のあるアプリとフィールドは、アプリ削除時に自動検出されます。検出画面から対象アプリの設定画面にジャンプし、参照を解除する手順を説明します。<Wovn></Wovn>
 
-1. アプリの削除を実行しようとした際に「このアプリを参照しているアプリが見つかりました」ダイアログが表示されたら、[手動で参照を解除]をクリックします。  
-   <Img src="/k/kintone/img-ja/delete_app_img7.png" alt="スクリーンショット：[手動で参照を解除]を枠線で強調している" />
-  「手動で参照を解除」ダイアログが表示され、削除対象のアプリを直接参照しているアプリおよびフィールドが表示されます。
+1. アプリの削除をしようとした際に<Wovn>［このアプリを参照しているアプリが見つかりました］</Wovn>ダイアログが表示されたら、<Wovn>［手動で参照を解除］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn>  
+   <Img src="/k/kintone/img-ja/delete_app_img7.png" alt="スクリーンショット：［手動で参照を解除］を枠線で強調している" />
+  <Wovn>［手動で参照を解除］</Wovn>ダイアログが表示され、削除対象のアプリを直接参照しているアプリおよびフィールドが表示されます。<Wovn></Wovn>
 
-1. 「手動で参照を解除」ダイアログで、表示されたリンクをクリックし、アプリの設定画面にジャンプします。  
-   <Img src="/k/kintone/img-ja/delete_app_img8.png" alt="スクリーンショット：「アプリの設定を開く」リンクを枠線で強調している" />
+1. <Wovn>［手動で参照を解除］</Wovn>ダイアログで、表示されたリンクをクリックし、<Wovn>［アプリの設定］</Wovn>画面にジャンプします。<Wovn></Wovn><Wovn></Wovn>  
+   <Img src="/k/kintone/img-ja/delete_app_img8.png" alt="スクリーンショット：［アプリの設定を開く］リンクを枠線で強調している" />
 
-1. 「手動で参照を解除」ダイアログに表示されていたルックアップフィールドまたは関連レコード一覧フィールドを削除し、アプリを更新します。  
-  例：ここでは、手順2の画面で表示された活動履歴（営業支援パック）アプリの「案件名」（ルックアップフィールド）および「案件詳細」（関連レコード一覧フィールド）を削除します。  
+1. <Wovn>［手動で参照を解除］</Wovn>ダイアログに表示されていた<Wovn>［ルックアップ］</Wovn>フィールドまたは<Wovn>［関連レコード一覧］</Wovn>フィールドを削除し、アプリを更新します。<Wovn></Wovn>  
+  例：ここでは、手順2の画面で表示された活動履歴（営業支援パック）アプリの「案件名」（<Wovn>［ルックアップ］</Wovn>フィールド）および「案件詳細」（<Wovn>［関連レコード一覧］</Wovn>フィールド）を削除します。  
    <Img src="/k/kintone/img-ja/delete_app_img9.png" alt="スクリーンショット：「案件名」と「案件詳細」を枠線で強調している" />
 
 1. 参照関係のあるアプリが複数存在する場合は、手順2～3を繰り返します。
 
-1. 削除したいアプリの設定画面をもう一度開き、[設定]タブの「アプリの削除」の[アプリを削除する]をクリックしてアプリの削除をやり直します。
+1. 削除したいアプリの設定画面をもう一度開き、<Wovn>［設定］</Wovn>タブの<Wovn>［アプリの削除］</Wovn>の<Wovn>［アプリを削除する］</Wovn>をクリックしてアプリの削除をやり直します。<Wovn></Wovn><Wovn></Wovn><Wovn></Wovn><Wovn></Wovn>
 
 <Heading id="create_app_delete_app_20">アプリを削除しようとしてエラーが表示されたときは</Heading>
 
-[削除の実行]をクリックしてエラーが表示された場合、管理者権限のないほかのアプリのルックアップフィールドまたは関連レコード一覧フィールドから参照されていると考えられます。
+<Wovn>［削除の実行］</Wovn>をクリックしてエラーが表示された場合、管理者権限のないほかのアプリの<Wovn>［ルックアップ］</Wovn>フィールドまたは<Wovn>［関連レコード一覧］</Wovn>フィールドから参照されていると考えられます。<Wovn></Wovn>
 
 エラー例：  
 アプリを削除できません。「\*\*\*」アプリのルックアップフィールド「\*\*\*」から参照されています。参照元のルックアップフィールドの設定を変更するか、または削除してください。
@@ -112,5 +116,5 @@ import Warning from "@/components/Warning.astro";
 
 この場合は、以下のいずれかの方法で対処してください。
 
-* エラーに表示されたアプリの管理者に、該当のルックアップフィールドまたは関連レコード一覧の削除を依頼する。
+* エラーに表示されたアプリの管理者に、該当の<Wovn>［ルックアップ］</Wovn>フィールドまたは<Wovn>［関連レコード一覧］</Wovn>の削除を依頼する。<Wovn></Wovn><Wovn></Wovn>
 * 削除対象のアプリ、およびエラーに表示されたアプリの両方の管理権限を持つ管理者に、アプリの削除を依頼する。
