--- a/kintone-help-astro-poc/src/pages/ja/app/setup/template/whats_template.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/template/whats_template.mdx
@@ -33,12 +33,14 @@ import Kintone from "@/components/Kintone.astro";
 たとえば、社外の相談相手にアプリの設定内容を見てもらいながら相談したいとき。アプリテンプレートファイルをダウンロードし、相談相手に送ると、相手の<Kintone />環境でも同じような設定内容のアプリを作成できるようになり、よりスムーズに相談が進みます。  
 <Img src="/k/kintone/img-ja/template_whats_template_img01.png" alt="スクリーンショット：ダウンロードしたテンプレートファイルを読み込む様子を複数のスクリーンショットを使って示している" />
 
-アプリテンプレートをファイルとして<Kintone />の外に保存する手順は、「[アプリをテンプレートとしてダウンロードする](/k/ja/id/040493.html)」で説明しています。
+アプリテンプレートをファイルとして<Kintone />の外に保存する手順は、次のページを参照してください。  
+[アプリをテンプレートとしてダウンロードする](/k/ja/id/040493.html)
 
 一度<Kintone />内に登録したテンプレートを、あとから<Kintone />の外に書き出すことも可能です。  
 [<Kintone />に登録されているアプリテンプレートをファイルに書き出す](/k/ja/id/04019.html)
 
-<Kintone />の外に保存したテンプレートファイルから新しいアプリを作成する手順は、「[テンプレートファイルからアプリを作成する](/k/ja/id/040627.html)」で説明しています。
+<Kintone />の外に保存したテンプレートファイルから新しいアプリを作成する手順は、次のページを参照してください。  
+[テンプレートファイルからアプリを作成する](/k/ja/id/040627.html)
 
 <Heading id="app_admin_template_whats_template_20">アプリテンプレートを&lt;Kintone /&gt;内に登録する</Heading>
 
@@ -47,9 +49,11 @@ import Kintone from "@/components/Kintone.astro";
 たとえば、ひな型となるアプリをもとに、各部署で設定をカスタマイズしてアプリを活用してもらいたい場合などに、アプリテンプレートを<Kintone />に登録しておくと便利です。  
 <Img src="/k/kintone/img-ja/template_whats_template_img02.png" alt="スクリーンショット：アプリをテンプレート化する様子を複数のスクリーンショットを使って示している" />
 
-アプリをテンプレート化して<Kintone />内に登録する手順は、「[作成済みのアプリをテンプレート化して<Kintone />に登録する](/k/ja/id/04018.html)」で説明しています。  
+アプリをテンプレート化して<Kintone />内に登録する手順は、次のページを参照してください。  
+[作成済みのアプリをテンプレート化して<Kintone />に登録する](/k/ja/id/04018.html)
 
 一度<Kintone />の外に保存したテンプレートファイルを、あとから<Kintone />内に登録することも可能です。  
 [<Kintone />の外に保存されているアプリテンプレートファイルを<Kintone />に登録する](/k/ja/id/04020.html)
 
-<Kintone />内に登録したテンプレートからアプリを作成する手順は、「[登録済みのテンプレートからアプリを作成する](/k/ja/id/040632.html)」で説明しています。
+<Kintone />内に登録したテンプレートからアプリを作成する手順は、次のページを参照してください。  
+[登録済みのテンプレートからアプリを作成する](/k/ja/id/040632.html)
