--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/disk_storage/exceed.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/disk_storage/exceed.mdx
@@ -8,13 +8,13 @@ layout: "@/layouts/PageLayout.astro"
 ---
 
 import Img from "@/components/Img.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
 ディスク使用量が、ディスク容量の上限を超えても、サービスがすぐに使用停止することはありません。  
 ただし、必要な対処をしなければ、一定期間経過後にサービスを使用停止にすることがあります。  
 
-<br />
-ディスク容量の上限を超えると、契約確認画面の「Options」セクションに警告が表示されます。  
+ディスク容量の上限を超えると、契約確認画面の<Wovn>［Options］</Wovn>セクションに警告が表示されます。  
 
 <Img src="/k/kintone/img-ja/disk_storage_exceed_img01.png" alt="警告メッセージの表示例" />  
 
