--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/disk_storage/terminate.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/disk_storage/terminate.mdx
@@ -10,21 +10,22 @@ layout: "@/layouts/PageLayout.astro"
 import Img from "@/components/Img.astro";
 import Kintone from "@/components/Kintone.astro";
 import SlashUi from "@/components/SlashUi.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
-「Purchased Storage」をすべて解約します。  
+「Purchased Storage」をすべて解約する方法を説明します。  
 解約手続き後は、支払い済みの月内であれば、「Purchased Storage」は利用できます。  
 
-1. <Kintone />の画面上部の歯車の形をした[設定]アイコンをクリックします。  
+1. <Kintone />の画面上部の歯車の形をした<Wovn>［設定］</Wovn>アイコンをクリックします。  
 
-1. [<SlashUi />]をクリックします。  
-   <Img src="/k/kintone/img-ja/disk_storage_terminate_img01.png" alt="管理画面を表示方法を示す画像" />
+1. <Wovn>［<SlashUi />］</Wovn>をクリックします。  
+   <Img src="/k/kintone/img-ja/disk_storage_terminate_img01.png" alt="［{{&lt; slash_ui &gt;}}］の表示方法を示す画像" />
 
-1. 「契約状況」画面を表示し、[購入状況]をクリックします。  
+1. <Wovn>［契約状況］</Wovn>画面を表示し、<Wovn>［購入状況］</Wovn>をクリックします。  
   契約内容が表示されます。  
-   <Img src="/k/kintone/img-ja/disk_storage_terminate_img02.png" alt="[購入状況]が矩形で囲まれた画像" />
+   <Img src="/k/kintone/img-ja/disk_storage_terminate_img02.png" alt="［購入状況］が矩形で囲まれた画像" />
 
-1. 「Options」セクションの「Storage」で、[Terminate]をクリックします。  
+1. <Wovn>［Options］</Wovn>セクションの<Wovn>［Storage］</Wovn>で、<Wovn>［Terminate］</Wovn>をクリックします。  
    <Img src="/k/kintone/img-ja/disk_storage_terminate_img07.png" alt="Optionsを示す画像" />
 
-1. 確認画面で[TERMINATE]をクリックします。  
+1. 確認画面で<Wovn>［TERMINATE］</Wovn>をクリックします。  
