--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/database_locked.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/database_locked.mdx
@@ -9,40 +9,40 @@ layout: "@/layouts/PageLayout.astro"
 import Enabled from "@/components/Enabled.astro";
 import Heading from "@/components/Heading.astro";
 import Reference from "@/components/Reference.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
-アプリの設定を更新する際などに、「データベースがロックされているため、操作に失敗しました。時間をおいて再度お試しください。」というエラーが表示される場合があります。  
-このエラーが表示された場合は、時間をおいてから操作をやり直してください。また、アプリの設定を更新する時間帯を、夜間などほかのユーザーが操作しない時間帯にすることもご検討ください。  
+アプリの設定を更新する際などに、次のエラーが表示される場合があります。  
+
+エラー：  
+データベースがロックされているため、操作に失敗しました。時間をおいて再度お試しください。  
+
+このエラーが表示された場合は、時間をおいてから操作をやり直してください。また、アプリの設定を更新する時間帯を、夜間などほかのユーザーが操作しない時間帯にすることも検討してください。  
 
 <Heading id="general_database_locked_10">参考：エラーの回避方法</Heading>
 
 レコード数やフィールド数、アクセス権の設定数が非常に多いアプリでは、アプリの更新処理に時間がかかり、エラーが発生しやすくなる場合があります。該当のアプリだけでなく、そのほかのアプリでエラーが発生することにもつながります。  
-エラー発生を回避するために、次の対応をご検討ください。  
+エラー発生を回避するために、次の対応を検討してください。  
 
-* ほかのユーザーが操作しない時間帯にアプリの設定更新を行う  
-<br />
+* ほかのユーザーが操作しない時間帯にアプリの設定更新を行う
 
 * アプリのレコード数を減らす  
-  レコード数が多くなった場合は、アプリを分割することをご検討ください。  
-<br />
+  レコード数が多くなった場合は、アプリを分割することを検討してください。
 
 * アプリのフィールド数を減らす  
-  フィールドを削除すると、そのフィールドに登録されたデータもすべて削除されます。レコードデータを書き出してバックアップを取得のうえ、フィールドを削除することをご検討ください。  
+  フィールドを削除すると、そのフィールドに登録されたデータもすべて削除されます。レコードデータを書き出してバックアップを取得のうえ、フィールドを削除することを検討してください。  
   参考：[ファイルにデータを書き出す](/k/ja/id/040452.html)  
-<br />
 
-* 選択系フィールド（ドロップダウンなど）の選択肢を減らす  
-  選択肢の多いフィールドをアプリに配置している場合は、選択肢を減らすことができないか、設定の見直しをご検討ください。  
-  参考：選択系フィールドを配置するかわりに、選択肢を管理するマスターアプリを別途作成したうえで、ルックアップフィールドで選択肢の値を取得する方法もあります。  
+* 選択系フィールド（<Wovn>［ドロップダウン］</Wovn>など）の選択肢を減らす  
+  選択肢の多いフィールドをアプリに配置している場合は、選択肢を減らすことができないか、設定の見直しを検討してください。  
+  参考：選択系フィールドを配置するかわりに、選択肢を管理するマスターアプリを別途作成したうえで、<Wovn>［ルックアップ］</Wovn>フィールドで選択肢の値を取得する方法もあります。  
   [ルックアップを設定する](/k/ja/id/040547.html)  
-<br />
 
 * アクセス権の設定数を減らす  
-  条件をまとめることや、不要なアクセス権を削除することをご検討ください。  
-<br />
+  条件をまとめることや、不要なアクセス権を削除することを検討してください。  
 
 * アクセス権を持つユーザー／組織／グループの数を減らす  
-  複数のユーザーを条件に設定している場合は、グループや組織でまとめることができないか、設定の見直しをご検討ください。  
+  複数のユーザーを条件に設定している場合は、グループや組織でまとめることができないか、設定の見直しを検討してください。
 
 <Enabled regions={["JP"]}>
 <Reference>
