--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/localization.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/localization.mdx
@@ -10,6 +10,7 @@ import Heading from "@/components/Heading.astro";
 import Img from "@/components/Img.astro";
 import Kintone from "@/components/Kintone.astro";
 import Note from "@/components/Note.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
 <Kintone />は、さまざまな言語で利用できます。
@@ -30,9 +31,9 @@ import Note from "@/components/Note.astro";
   例：フォーム設定画面のアプリ名やフィールド名、選択肢の項目名など  
   各フィールドの設定画面で入力した文字は、そのままフォームに表示されます。
   <Img src="/k/kintone/img-ja/other_language_01.png" alt="スクリーンショット：アプリ名やフィールド名をベトナム語で入力している" />
-* レコードの追加画面またはレコードの編集画面の入力欄  
+* レコードの追加画面またはレコードの編集画面の入力欄<Wovn></Wovn><Wovn></Wovn>  
   例：フォームの入力欄やコメントの入力欄  
-  <Img src="/k/kintone/img-ja/other_language_02.png" alt="スクリーンショット：レコード作成画面やコメント欄でベトナム語を入力している" />
+  <Img src="/k/kintone/img-ja/other_language_02.png" alt="スクリーンショット：レコードの追加画面やコメント欄でベトナム語を入力している" />
 * スペースのスレッドの入力欄  
   スペースやスレッドの名前や説明もそれぞれ設定画面で入力可能です。
   <Img src="/k/kintone/img-ja/other_language_03.png" alt="スクリーンショット：スペースのスレッドでベトナム語を使用している" />
@@ -67,25 +68,25 @@ import Note from "@/components/Note.astro";
 
 <Heading id="general_localization_20">アプリの各項目の名称を言語ごとに切り替える</Heading>
 
-アプリ設定で「言語ごとの名称」を設定すると、アプリ名やフィールド名など、アプリの各項目の名称を、画面の表示言語に応じて自動で切り替えられます。  
+<Wovn>［アプリの設定］</Wovn>で<Wovn>［言語ごとの名称］</Wovn>を設定すると、アプリ名やフィールド名など、アプリの各項目の名称を、画面の表示言語に応じて自動で切り替えられます。  
 たとえば、お使いの環境を日本語で利用するユーザーと英語で利用するユーザーがいる場合、アプリの各項目の名称を日本語と英語でそれぞれ設定すると、日本語で利用するユーザーには日本語の名称が、英語で利用するユーザーには英語の名称が表示されるようになります。
 
-「言語ごとの名称」を設定できる言語は、次のとおりです。
+<Wovn>［言語ごとの名称］</Wovn>を設定できる言語は、次のとおりです。
 
 * 日本語
 * 英語
 * 中国語（簡体字）
 
-次のユーザーには、「デフォルト」の名称が表示されます。
+次のユーザーには、<Wovn>［デフォルト］</Wovn>の名称が表示されます。
 
 * 言語ごとの名称を設定していない言語を表示言語に設定している  
-  例：「言語ごとの名称」で中国語（簡体字）を設定していない状態で、表示言語に中国語（簡体字）を設定している
+  例：<Wovn>［言語ごとの名称］</Wovn>で中国語（簡体字）を設定していない状態で、表示言語に中国語（簡体字）を設定している
 * 言語ごとの名称を設定できない言語を表示言語に設定している  
   例：表示言語にスペイン語を設定している
 
 <Note>
 
-アプリの「言語ごとの名称」の設定方法は、次のページを参照してください。  
+アプリの<Wovn>［言語ごとの名称］</Wovn>の設定方法は、次のページを参照してください。  
 [言語ごとの名称を設定する](/k/ja/id/040557.html)
 
 </Note>
