--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/send_feedback.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/send_feedback.mdx
@@ -10,19 +10,20 @@ layout: "@/layouts/PageLayout.astro"
 import Img from "@/components/Img.astro";
 import Kintone from "@/components/Kintone.astro";
 import Note from "@/components/Note.astro";
+import Wovn from "@/components/Wovn.astro";
 
 
-<Kintone />に対して改善提案やご意見などがある場合は、<Kintone />からフィードバックを送ることが可能です。  
-お送りいただいた内容は<Kintone />開発チームが受け取り、<Kintone />の改善を目的として利用させていただきます。
+<Kintone />に対して改善提案やご意見などがある場合は、<Kintone />からフィードバックを送ることができます。  
+お送りいただいた内容は<Kintone />開発チームが受け取り、<Kintone />の改善を目的として利用いたします。
 
-フィードバックを送るには、<Kintone />の画面上部の「？」の形をした[ヘルプ]アイコンから[<Kintone /> の改善に協力]をクリックします。入力フォームが開くので、内容を記入して送信してください。
+フィードバックを送るには、<Kintone />の画面上部の「？」の形をした<Wovn>［ヘルプ］</Wovn>アイコンから<Wovn>［<Kintone /> の改善に協力］</Wovn>をクリックします。入力フォームが開いたら、内容を記入して送信してください。
 
 <Img src="/k/kintone/img-ja/send_feedback_img01.png" alt="スクリーンショット：フィードバックを送るメニューが枠線で強調されている" />
 
 <Note>
 
-* 「<Kintone />の改善に協力」は、管理者だけではなく、すべてのユーザーの方にご利用いただけます。
-* リリース済みの機能だけではなく、アップデートオプション画面の「検討中の新機能」に対する意見や感想も募集しています。  
+* <Wovn>［<Kintone /> の改善に協力］</Wovn>は、管理者だけではなく、すべてのユーザーが利用できます。
+* リリース済みの機能だけではなく、アップデートオプション画面の<Wovn>［検討中の新機能］</Wovn>に対する意見や感想も募集しています。  
   [アップデートオプション画面でできること](/k/ja/id/04050.html)
 
 </Note>
